Refactor UI components and add SEO routes
Replaces all *Client components with *UI components and updates page files to use the new UI components with locale props. Refactors metadata generation to use translation utilities for localized SEO. Adds app/robots.ts and app/sitemap.ts for SEO and crawling, and updates i18n files for improved localization.

--- a/i18n/ar/web-development-services.json
+++ b/i18n/ar/web-development-services.json
@@ -18,5 +18,25 @@
   "feature.database": "تصميم وإدارة قواعد البيانات",
   "feature.auth": "المصادقة والترخيص",
   "feature.cloudIntegration": "تكامل السحابة",
-  "keywords": "تطوير الويب, خدمات, react, nextjs"
+  "keywords": "تطوير الويب, خدمات, react, nextjs",
+  "webDev": {
+    "title": "خدمات تطوير الويب",
+    "description": "خدمات تطوير وب احترافية باستخدام التكنولوجيا الحديثة وأفضل الممارسات",
+    "customSites": "تطوير مواقع مخصصة",
+    "customDesc": "مواقع مخصصة مبنية باستخدام الإطارات الحديثة والتصميم المتجاوب",
+    "ecommerce": "حلول التجارة الإلكترونية",
+    "ecommerceDesc": "متاجر إلكترونية مع تكامل الدفع وإدارة المخزون",
+    "cms": "أنظمة إدارة المحتوى",
+    "cmsDesc": "منصات CMS سهلة الاستخدام لإدارة المحتوى",
+    "api": "تطوير APIs",
+    "apiDesc": "APIs RESTful وخدمات backend",
+    "performance": "تحسين الأداء",
+    "performanceDesc": "مواقع تحميل سريع بأداء مثالي",
+    "maintenance": "صيانة المواقع",
+    "maintenanceDesc": "دعم مستمر وتحديثات الموقع"
+  },
+  "webDevServices": {
+    "title": "خدمات تطوير الويب",
+    "description": "خدمات تطوير الويب الاحترافية بما في ذلك تصميم مواقع مخصصة، إعداد التجارة الإلكترونية، أنظمة CMS، وتحسين الأداء"
+  }
 }
