--- a/i18n/en/blog.json
+++ b/i18n/en/blog.json
@@ -1,25 +1,25 @@
 
 {
-  "title": "Blog",
-  "recentPosts": "Recent Posts",
-  "readMore": "Read More",
-  "popularTopics": "Popular Topics",
-  "categories": "Categories",
-  "searchPlaceholder": "Search articles...",
-  "relatedArticles": "Related Articles",
-  "publishedOn": "Published on",
-  "minuteRead": "min read",
-  "author": "Author",
-  "shareArticle": "Share this article",
-  "tags": "Tags",
-  "subscribe": "Subscribe to our newsletter",
-  "subscribeDesc": "Get the latest articles and insights directly to your inbox",
-  "blogTitle": "Latest Digital Marketing Articles & News",
-  "blogDescription": "Read our latest posts and articles about SEO, web design and digital marketing",
-  "filterBy": "Filter by",
-  "allCategories": "All categories",
-  "tableOfContents": "Table of Contents",
-  "keyTakeaways": "Key Takeaways",
-  "faq": "Frequently Asked Questions",
-  "backToBlog": "Back to Blog"
+  "title": "المدونة",
+  "recentPosts": "أحدث المقالات",
+  "readMore": "قراءة المزيد",
+  "popularTopics": "المواضيع الشائعة",
+  "categories": "التصنيفات",
+  "searchPlaceholder": "البحث عن مقالات...",
+  "relatedArticles": "مقالات ذات صلة",
+  "publishedOn": "نشرت في",
+  "minuteRead": "دقيقة للقراءة",
+  "author": "الكاتب",
+  "shareArticle": "مشاركة هذا المقال",
+  "tags": "الوسوم",
+  "subscribe": "اشترك في نشرتنا الإخبارية",
+  "subscribeDesc": "احصل على أحدث المقالات والرؤى مباشرة في بريدك الوارد",
+  "blogTitle": "أحدث مقالات وأخبار التسويق الرقمي",
+  "blogDescription": "اقرأ أحدث المقالات والمدونات عن تحسين محركات البحث وتصميم الويب والتسويق الرقمي",
+  "filterBy": "تصفية حسب",
+  "allCategories": "جميع التصنيفات",
+  "tableOfContents": "جدول المحتويات",
+  "keyTakeaways": "النقاط الرئيسية",
+  "faq": "الأسئلة الشائعة",
+  "backToBlog": "العودة إلى المدونة"
 }
