--- a/i18n/en/caseStudies.json
+++ b/i18n/en/caseStudies.json
@@ -1,62 +1,62 @@
 
 {
-  "title": "Case Studies",
-  "description": "Explore our case studies to see the journey from initial challenges to measurable results. Each case study demonstrates our commitment to delivering value.",
-  "challenge": "Challenge",
-  "solution": "Solution",
-  "results": "Results",
-  "downloadHint": "Want to learn more about our approach and outcomes?",
-  "downloadFull": "Download Full Case Studies",
-  "contactForMore": "Contact Us for More Information",
+  "title": "دراسات الحالة",
+  "description": "استكشف دراسات الحالة لدينا لرؤية الرحلة من التحديات الأولية إلى النتائج القابلة للقياس. تظهر كل دراسة حالة التزامنا بتقديم القيمة.",
+  "challenge": "التحدي",
+  "solution": "الحل",
+  "results": "النتائج",
+  "downloadHint": "هل تريد معرفة المزيد عن نهجنا ونتائجنا؟",
+  "downloadFull": "تحميل دراسات الحالة الكاملة",
+  "contactForMore": "اتصل بنا للحصول على مزيد من المعلومات",
   "ecommerceCase": {
-    "title": "200% Increase in Online Sales with SEO",
-    "category": "Case Study: E-commerce Store",
-    "challenge": "An online home appliance store had quality products but low traffic and sales. The main problem was lack of proper SEO and poor user experience.",
-    "solution": "Our team designed a comprehensive strategy including technical site optimization, content structure improvement, information architecture correction, and creation of custom landing pages for popular products.",
-    "results1": "200% increase in online sales over 6 months",
-    "results2": "150% improvement in organic traffic from Google",
-    "results3": "30% increase in conversion rate",
-    "results4": "25% decrease in bounce rate",
-    "testimonial": "Working with WebABC was one of our best business decisions. The results of optimizing our site exceeded our expectations by far.",
-    "imageAlt": "E-commerce store sales growth chart after SEO by WebABC",
-    "resultsImageAlt": "E-commerce store keyword ranking results after WebABC SEO implementation"
+    "title": "زيادة 200٪ في المبيعات عبر الإنترنت مع تحسين محركات البحث",
+    "category": "دراسة حالة: متجر عبر الإنترنت",
+    "challenge": "كان لدى متجر الأجهزة المنزلية عبر الإنترنت منتجات عالية الجودة ولكن حركة مرور ومبيعات منخفضة. كانت المشكلة الرئيسية هي عدم وجود تحسين مناسب لمحركات البحث وتجربة مستخدم سيئة.",
+    "solution": "صمم فريقنا استراتيجية شاملة تشمل تحسين الموقع التقني، وتحسين بنية المحتوى، وتصحيح بنية المعلومات، وإنشاء صفحات هبوط مخصصة للمنتجات الشائعة.",
+    "results1": "زيادة 200٪ في المبيعات عبر الإنترنت خلال 6 أشهر",
+    "results2": "تحسن بنسبة 150٪ في حركة المرور العضوية من جوجل",
+    "results3": "زيادة 30٪ في معدل التحويل",
+    "results4": "انخفاض 25٪ في معدل الارتداد",
+    "testimonial": "كان التعاون مع ويب أ ب ج أحد أفضل قرارات أعمالنا. تجاوزت نتائج تحسين موقعنا توقعاتنا بكثير.",
+    "imageAlt": "مخطط نمو مبيعات المتجر عبر الإنترنت بعد تحسين محركات البحث بواسطة ويب أ ب ج",
+    "resultsImageAlt": "نتائج تحسين ترتيب الكلمات الرئيسية للمتجر عبر الإنترنت بعد تنفيذ تحسين محركات البحث بواسطة ويب أ ب ج"
   },
   "wordpressCase": {
-    "title": "Brand Relaunch with Custom WordPress Site",
-    "category": "Case Study: WordPress Development",
-    "challenge": "A beauty brand needed a complete digital transformation of their outdated website which was difficult to update and wasn't generating leads or sales.",
-    "solution": "We developed a custom WordPress site with a distinctive theme, integrated e-commerce functionality, and implemented a content strategy focused on product education and beauty tips.",
-    "results1": "75% increase in average time on site",
-    "results2": "180% growth in newsletter subscriptions",
-    "results3": "95% increase in online product inquiries",
-    "testimonial": "The WebABC team delivered a website that perfectly represents our brand identity. The site is not only beautiful but also easy to use and has significantly enhanced our digital presence.",
-    "imageAlt": "Beauty brand WordPress site redesign showing responsive layout on multiple devices",
-    "resultsImageAlt": "Analytics dashboard showing improvements in user engagement metrics after site redesign"
+    "title": "إعادة إطلاق العلامة التجارية مع موقع ووردبريس مخصص",
+    "category": "دراسة حالة: تطوير ووردبريس",
+    "challenge": "احتاجت علامة تجارية للجمال إلى تحول رقمي كامل لموقعها القديم الذي كان من الصعب تحديثه ولم يكن ينتج عملاء محتملين أو مبيعات.",
+    "solution": "قمنا بتطوير موقع ووردبريس مخصص مع قالب متميز، ودمج وظائف التجارة الإلكترونية، وتنفيذ استراتيجية محتوى تركز على تعليم المنتج ونصائح الجمال.",
+    "results1": "زيادة بنسبة 75٪ في متوسط وقت البقاء على الموقع",
+    "results2": "نمو بنسبة 180٪ في اشتراكات النشرة الإخبارية",
+    "results3": "زيادة بنسبة 95٪ في استفسارات المنتجات عبر الإنترنت",
+    "testimonial": "قدم فريق ويب أ ب ج موقع ويب يمثل هوية علامتنا التجارية بشكل مثالي. الموقع ليس جميلاً فحسب، بل سهل الاستخدام أيضاً وقد عزز تواجدنا الرقمي بشكل كبير.",
+    "imageAlt": "إعادة تصميم موقع ووردبريس للعلامة التجارية للجمال يظهر التخطيط المتجاوب على أجهزة متعددة",
+    "resultsImageAlt": "لوحة تحليلات تظهر تحسينات في مقاييس مشاركة المستخدم بعد إعادة تصميم الموقع"
   },
   "localSeoCase": {
-    "title": "500% Increase in Appointments through Local SEO Strategy",
-    "category": "Case Study: Local SEO",
-    "challenge": "A dental clinic was struggling to attract local patients despite offering excellent services. Their online presence was minimal, and they were outranked by competitors in local searches.",
-    "solution": "We implemented a comprehensive local SEO strategy including Google Business Profile optimization, local citation building, review management, and location-specific content creation.",
-    "results1": "500% increase in appointment bookings within 4 months",
-    "results2": "Top 3 rankings for all key local keywords",
-    "results3": "300% improvement in website traffic from local searches",
-    "results4": "Average 4.9/5 rating with over 120 reviews from new patients",
-    "testimonial": "The local SEO campaign transformed our business. We're now booked weeks in advance and had to hire additional staff to handle the growth. I highly recommend WebABC's local SEO services.",
-    "imageAlt": "Google Maps showing the dental clinic's higher ranking after local SEO",
-    "resultsImageAlt": "Chart showing growth in local search visibility and appointment bookings after SEO implementation"
+    "title": "زيادة 500٪ في المواعيد من خلال استراتيجية تحسين محركات البحث المحلية",
+    "category": "دراسة حالة: تحسين محركات البحث المحلية",
+    "challenge": "كانت عيادة أسنان تكافح لجذب المرضى المحليين رغم تقديمها خدمات ممتازة. كان وجودها عبر الإنترنت ضئيلاً، وكانت متخلفة عن المنافسين في عمليات البحث المحلية.",
+    "solution": "نفذنا استراتيجية شاملة لتحسين محركات البحث المحلية بما في ذلك تحسين ملف Google Business، وبناء الاستشهادات المحلية، وإدارة المراجعات، وإنشاء محتوى خاص بالموقع.",
+    "results1": "زيادة بنسبة 500٪ في حجوزات المواعيد خلال 4 أشهر",
+    "results2": "تصنيفات ضمن أفضل 3 لجميع الكلمات الرئيسية المحلية الرئيسية",
+    "results3": "تحسن بنسبة 300٪ في حركة مرور الموقع من عمليات البحث المحلية",
+    "results4": "متوسط تقييم 4.9/5 مع أكثر من 120 مراجعة من المرضى الجدد",
+    "testimonial": "لقد حولت حملة تحسين محركات البحث المحلية أعمالنا. أصبحنا الآن محجوزين لعدة أسابيع مقدماً واضطررنا إلى توظيف موظفين إضافيين للتعامل مع النمو. أوصي بشدة بخدمات تحسين محركات البحث المحلية من ويب أ ب ج.",
+    "imageAlt": "خرائط جوجل تظهر التصنيف الأعلى لعيادة الأسنان بعد تحسين محركات البحث المحلية",
+    "resultsImageAlt": "مخطط يوضح النمو في الظهور في البحث المحلي وحجوزات المواعيد بعد تنفيذ تحسين محركات البحث"
   },
   "webDevCase": {
-    "title": "React-based Financial Platform with 99.9% Uptime",
-    "category": "Case Study: Web App Development",
-    "challenge": "A fintech startup needed a secure, scalable web application for financial data analysis and reporting, with stringent requirements for performance and reliability.",
-    "solution": "We developed a custom web application based on React with a Node.js backend, implementing advanced data visualization, real-time data processing, and bank-level security protocols.",
-    "results1": "99.9% uptime since launch",
-    "results2": "90% faster data processing compared to previous solution",
-    "results3": "Successfully passed external security audit with zero critical findings",
-    "results4": "Scalable architecture supporting 10x user growth without performance degradation",
-    "testimonial": "WebABC provided a robust platform that was critical for our business growth. Their attention to detail, especially around security and performance optimization, demonstrated their expertise in financial application development.",
-    "imageAlt": "Dashboard interface of the React financial platform showing data visualization components",
-    "resultsImageAlt": "Performance metrics showing system uptime and response time optimization after deployment"
+    "title": "منصة مالية قائمة على React مع وقت تشغيل 99.9٪",
+    "category": "دراسة حالة: تطوير تطبيقات الويب",
+    "challenge": "احتاجت شركة تقنية مالية ناشئة إلى تطبيق ويب آمن وقابل للتوسع لتحليل البيانات المالية وإعداد التقارير، مع متطلبات صارمة للأداء والموثوقية.",
+    "solution": "طورنا تطبيق ويب مخصص يعتمد على React مع خلفية Node.js، وتنفيذ تصور بيانات متقدم، ومعالجة بيانات في الوقت الحقيقي، وبروتوكولات أمان على مستوى البنوك.",
+    "results1": "وقت تشغيل 99.9٪ منذ الإطلاق",
+    "results2": "معالجة بيانات أسرع بنسبة 90٪ مقارنة بالحل السابق",
+    "results3": "اجتياز تدقيق أمني خارجي بنجاح بدون نتائج حرجة",
+    "results4": "بنية قابلة للتوسع تدعم نمو المستخدمين بمعدل 10 أضعاف دون تدهور الأداء",
+    "testimonial": "قدمت ويب أ ب ج منصة قوية كانت حاسمة لنمو أعمالنا. أظهر الاهتمام بالتفاصيل، خاصة حول الأمان وتحسين الأداء، خبرتهم في تطوير التطبيقات المالية.",
+    "imageAlt": "واجهة لوحة القيادة لمنصة React المالية تعرض مكونات تصور البيانات",
+    "resultsImageAlt": "مقاييس الأداء التي توضح وقت تشغيل النظام وتحسين وقت الاستجابة بعد النشر"
   }
 }
