--- a/i18n/en/common.json
+++ b/i18n/en/common.json
@@ -1,60 +1,60 @@
 {
-  "home": "Home",
-  "portfolio": "Portfolio",
-  "caseStudies": "Case Studies",
-  "about": "About Us",
-  "contact": "Contact Us",
-  "serviceAreas": "Service Areas",
-  "learnMore": "Learn More",
-  "viewAllLocations": "View All Locations",
-  "completedProjects": "Completed Projects",
-  "happyClients": "Happy Clients",
-  "yearsExperience": "Years Experience",
-  "aboutOurServices": "About Our Services in",
-  "ourServices": "Our Services",
-  "webDesignAndDevelopment": "Web Design & Development",
-  "viewPortfolio": "View Portfolio",
-  "freeConsultation": "Free Consultation",
-  "allServices": "All Services",
-  "viewDetails": "View Details",
-  "sendRequest": "Send Request",
-  "cancel": "Cancel",
-  "backToTop": "Back to Top",
-  "contactViaWhatsApp": "Contact via WhatsApp",
-  "viewAll": "View All",
-  "contactUs": "Contact Us",
-  "sendEmail": "Send Email",
-  "readMore": "Read More",
-  "backToPortfolio": "Back to Portfolio",
-  "backToBlog": "Back to Blog",
-  "viewWebsite": "View Website",
-  "whatsappMessage": "Hello, I'm contacting you from your website and would like to receive more information.",
+  "home": "الرئيسية",
+  "services": "الخدمات",
+  "portfolio": "معرض الأعمال",
+  "caseStudies": "دراسات الحالة",
+  "about": "من نحن",
+  "contact": "اتصل بنا",
+  "serviceAreas": "مناطق الخدمة",
+  "learnMore": "اعرف المزيد",
+  "viewAllLocations": "عرض جميع المواقع",
+  "completedProjects": "المشاريع المنجزة",
+  "happyClients": "العملاء الراضون",
+  "yearsExperience": "سنوات الخبرة",
+  "aboutOurServices": "حول خدماتنا في",
+  "ourServices": "خدماتنا",
+  "webDesignAndDevelopment": "تصميم وتطوير المواقع",
+  "viewPortfolio": "عرض الأعمال",
+  "freeConsultation": "استشارة مجانية",
+  "allServices": "جميع الخدمات",
+  "viewDetails": "عرض التفاصيل",
+  "sendRequest": "إرسال طلب",
+  "cancel": "إلغاء",
+  "backToTop": "العودة إلى الأعلى",
+  "contactViaWhatsApp": "التواصل عبر واتساب",
+  "viewAll": "عرض الكل",
+  "contactUs": "اتصل بنا",
+  "sendEmail": "إرسال بريد إلكتروني",
+  "readMore": "قراءة المزيد",
+  "backToPortfolio": "العودة إلى معرض الأعمال",
+  "backToBlog": "العودة إلى المدونة",
+  "viewWebsite": "عرض الموقع",
+  "whatsappMessage": "مرحباً، أتواصل معكم من موقعكم وأرغب في الحصول على مزيد من المعلومات.",
   "notFound": {
-    "title": "Page Not Found",
-    "subtitle": "Sorry, the page you're looking for doesn't exist.",
-    "backHome": "Back to Home",
-    "backPrevious": "Go Back",
-    "errorNumber": "404"
+    "title": "الصفحة غير موجودة",
+    "subtitle": "عذراً، الصفحة التي تبحث عنها غير موجودة.",
+    "backHome": "العودة للرئيسية",
+    "backPrevious": "العودة للخلف",
+    "errorNumber": "٤٠٤"
   },
-  "loading": "Loading",
-  "success": "Success",
-  "error": "Error",
-  "submit": "Submit",
-  "search": "Search",
-  "filter": "Filter",
-  "sortBy": "Sort by",
-  "latestFirst": "Latest first",
-  "oldestFirst": "Oldest first",
-  "resetFilters": "Reset filters",
-  "noResults": "No results found",
-  "tryAgain": "Try Again",
-  "aboutCompany": "About WebABC: We are a digital marketing and web development agency.",
-  "blog": "Blog",
-  "services": "Services",
-  "company": "Company",
-  "resources": "Resources",
-  "copyright": "© {year} WebABC. All rights reserved.",
-  "privacyPolicy": "Privacy Policy",
-  "termsOfService": "Terms of Service",
-  "cookiePolicy": "Cookie Policy"
+  "loading": "جاري التحميل",
+  "success": "تم بنجاح",
+  "error": "خطأ",
+  "submit": "إرسال",
+  "search": "بحث",
+  "filter": "تصفية",
+  "sortBy": "ترتيب حسب",
+  "latestFirst": "الأحدث أولاً",
+  "oldestFirst": "الأقدم أولاً",
+  "resetFilters": "إعادة ضبط التصفية",
+  "noResults": "لم يتم العثور على نتائج",
+  "tryAgain": "حاول مرة أخرى",
+  "aboutCompany": "عن وب أي بي سي: نحن وكالة تسويق رقمي وتطوير مواقع.",
+  "blog": "المدونة",
+  "company": "الشركة",
+  "resources": "الموارد",
+  "copyright": "© {year} وب أي بي سي. جميع الحقوق محفوظة.",
+  "privacyPolicy": "سياسة الخصوصية",
+  "termsOfService": "شروط الخدمة",
+  "cookiePolicy": "سياسة الكوكيز"
 }
