--- a/i18n/en/resources.json
+++ b/i18n/en/resources.json
@@ -1,33 +1,33 @@
 
 {
-  "seoGuide": "SEO Guide",
-  "webDesignGuide": "Web Design Guide",
-  "specializedArticles": "Specialized Articles",
-  "freeTools": "Free Tools",
-  "faq": "FAQ",
-  "title": "Free Tools & Resources",
-  "subtitle": "Helpful guides, tools, and articles",
-  "readMore": "Read More",
-  "featuredResources": "Featured Resources",
-  "popularGuides": "Popular Guides",
-  "latestArticles": "Latest Articles",
-  "downloadNow": "Download Now",
-  "resourcesDesc": "Access our comprehensive collection of free SEO and content creation tools to improve your online presence",
-  "seoTools": "SEO & Digital Marketing Tools",
-  "contentTools": "Content Creation Tools",
-  "useTool": "Use Tool",
-  "serpPreview": "SERP Snippet Preview",
-  "serpPreviewDesc": "Preview how your page will appear in Google search results and optimize for better click-through rates",
-  "metaGenerator": "Meta Tag Generator",
-  "metaGeneratorDesc": "Generate SEO-optimized meta tags and Open Graph tags for your website",
-  "paaScaper": "People Also Ask Scraper",
-  "paaScraperDesc": "Discover common questions people ask about your keywords for better content ideas",
-  "utmBuilder": "UTM Link Builder",
-  "utmBuilderDesc": "Create trackable campaign URLs with UTM parameters for Google Analytics",
-  "headlineAnalyzer": "Headline Analyzer",
-  "headlineAnalyzerDesc": "Score your headlines based on length, sentiment, and emotional impact",
-  "readabilityChecker": "Readability Checker",
-  "readabilityCheckerDesc": "Analyze text readability and get a Flesch-Kincaid score",
-  "loremGenerator": "Lorem Ipsum Generator",
-  "loremGeneratorDesc": "Generate customizable placeholder text for your designs and mockups"
+  "seoGuide": "دليل تحسين محركات البحث",
+  "webDesignGuide": "دليل تصميم الويب",
+  "specializedArticles": "مقالات متخصصة",
+  "freeTools": "أدوات مجانية",
+  "faq": "الأسئلة الشائعة",
+  "title": "أدوات وموارد مجانية",
+  "subtitle": "أدلة وأدوات ومقالات مفيدة",
+  "readMore": "قراءة المزيد",
+  "featuredResources": "الموارد المميزة",
+  "popularGuides": "الأدلة الشائعة",
+  "latestArticles": "أحدث المقالات",
+  "downloadNow": "تحميل الآن",
+  "resourcesDesc": "استفد من مجموعتنا الشاملة من أدوات تحسين محركات البحث وإنشاء المحتوى المجانية",
+  "seoTools": "أدوات تحسين محركات البحث والتسويق الرقمي",
+  "contentTools": "أدوات إنشاء المحتوى",
+  "useTool": "استخدم الأداة",
+  "serpPreview": "معاينة نتائج البحث",
+  "serpPreviewDesc": "عاين كيف ستظهر صفحتك في نتائج بحث جوجل وحسّن معدل النقر",
+  "metaGenerator": "مولد الوسوم الوصفية",
+  "metaGeneratorDesc": "أنشئ وسوم ميتا محسّنة لمحركات البحث ووسوم Open Graph لموقعك",
+  "paaScaper": "مستخرج الأسئلة الشائعة",
+  "paaScraperDesc": "اكتشف الأسئلة الشائعة التي يطرحها الناس حول كلماتك المفتاحية",
+  "utmBuilder": "منشئ روابط UTM",
+  "utmBuilderDesc": "أنشئ روابط حملات قابلة للتتبع مع معاملات UTM لـ Google Analytics",
+  "headlineAnalyzer": "محلل العناوين",
+  "headlineAnalyzerDesc": "احصل على تقييم لعناوينك بناءً على الطول والمشاعر والتأثير العاطفي",
+  "readabilityChecker": "مدقق سهولة القراءة",
+  "readabilityCheckerDesc": "حلل سهولة قراءة النص واحصل على درجة Flesch-Kincaid",
+  "loremGenerator": "مولد نص تجريبي",
+  "loremGeneratorDesc": "أنشئ نصوصاً تجريبية قابلة للتخصيص لتصاميمك ونماذجك"
 }
