--- a/i18n/en/seo.json
+++ b/i18n/en/seo.json
@@ -1,75 +1,72 @@
+
 {
-  "defaultTitle": "WebABC | Web Design and SEO Services",
-  "defaultDescription": "🚀 Boost your online presence with WebABC's expert web design & SEO services. Get 300% more traffic, higher rankings & increased conversions. Free consultation!",
-  "author": "WebABC",
-  "siteName": "WebABC",
-  "keywords": "web design, SEO, search engine optimization, digital marketing, web development, WordPress",
-  "contactUsTitle": "Contact WebABC | Get in Touch with Our Digital Experts",
-  "contactUsDescription": "Contact WebABC for professional web development, SEO services, and digital marketing solutions. Get a free consultation today.",
-  "aboutUsTitle": "About WebABC | Professional Web & SEO Agency",
-  "aboutUsDescription": "Learn about WebABC, a leading web design and SEO services agency with over 10 years of experience in digital marketing solutions.",
-  "servicesTitle": "Our Professional Web & SEO Services | WebABC",
-  "servicesDescription": "💪 Transform your business with WebABC's expert SEO & web design services. Increase traffic by 300%, improve rankings & boost conversions. Custom solutions for every budget!",
-  "portfolioTitle": "WebABC Portfolio | Our Successful Projects",
-  "portfolioDescription": "Browse through WebABC's portfolio showcasing our successful web design and SEO projects for various industries.",
-  "seoServicesTitle": "Professional SEO Services | WebABC",
-  "seoServicesDescription": "🎯 Skyrocket your rankings with WebABC's proven SEO services! Get first page results in 90 days, 300% more organic traffic & higher conversions. Free SEO audit included!",
-  "webDevTitle": "Professional Web Development Services | WebABC",
-  "webDevDescription": "⚡ Build stunning websites with WebABC's expert developers! Fast, responsive & conversion-optimized sites using React, Next.js & modern tech. 50% faster loading times guaranteed!",
-  "wordpressTitle": "WordPress & WooCommerce Development | WebABC",
-  "wordpressDescription": "Expert WordPress and WooCommerce development services by WebABC. Get custom websites and online stores with unique design and optimal performance.",
-  "localSEOTitle": "Local SEO Services | Boost Your Local Presence | WebABC",
-  "localSEODescription": "📍 Dominate local searches with WebABC's proven local SEO! Get found by 500% more local customers, top 3 Google Maps rankings & more foot traffic. Free local SEO audit!",
-  "serviceAreasTitle": "Our Service Areas | Professional Web Design & SEO Services | WebABC",
-  "serviceAreasDescription": "WebABC provides expert web design, development, and SEO services across multiple locations including Muscat, Dubai, Tehran, and Qazvin. Customized digital solutions for your local market.",
-  "title": "Professional SEO Services",
-  "description": "Professional search engine optimization services to improve your website's visibility and ranking",
-  "subtitle": "Boost your website's visibility and rankings with our expert SEO strategies",
-  "technical": "Technical",
-  "local": "Local SEO",
-  "speedOptimization": "Site Speed Optimization",
-  "speedOptimizationDesc": "Optimize page loading times for better user experience and search rankings.",
-  "onPageSeo": "On-Page SEO",
-  "offPageSeo": "Off-Page SEO",
-  "technicalSeo": "Technical SEO",
-  "contentStrategy": "Content Strategy",
-  "keywordResearch": "Keyword Research",
-  "competitorAnalysis": "Competitor Analysis",
-  "localSeo": "Local SEO",
-  "ecommerceSeo": "E-commerce SEO",
-  "seoAudit": "SEO Audit",
-  "monthlyReporting": "Monthly Reporting",
-  "linkBuilding": "Link Building",
-  "conversionOptimization": "Conversion Optimization",
-  "specializedSEO": "Specialized SEO",
-  "technicalSeoDesc": "Technical optimization of your website to improve performance and increase ranking in search engines",
-  "contentStrategyDesc": "Production and optimization of quality content that is attractive to both users and search engines",
-  "localSeoDesc": "Increase your business visibility in local searches and Google Maps results",
-  "offPageSeoDesc": "Creating a powerful link profile with principled and natural link building strategy",
+  "defaultTitle": "ويب إيه بي سي | خدمات تصميم الويب وتحسين محركات البحث",
+  "defaultDescription": "شركة ويب إيه بي سي لخدمات تصميم الويب وتحسين محركات البحث | حلول التسويق الرقمي",
+  "author": "ويب إيه بي سي",
+  "siteName": "ويب إيه بي سي",
+  "keywords": "تصميم مواقع، تحسين محركات البحث، سيو، تسويق رقمي، تطوير الويب، ووردبريس",
+  "contactUsTitle": "اتصل بويب إيه بي سي | تواصل مع خبرائنا الرقميين",
+  "contactUsDescription": "تواصل مع ويب إيه بي سي للحصول على خدمات احترافية في تطوير الويب، وخدمات تحسين محركات البحث، وحلول التسويق الرقمي. احصل على استشارة مجانية اليوم.",
+  "aboutUsTitle": "عن ويب إيه بي سي | وكالة ويب وتحسين محركات البحث المحترفة",
+  "aboutUsDescription": "تعرف على ويب إيه بي سي، وكالة رائدة في تصميم الويب وخدمات تحسين محركات البحث مع أكثر من 10 سنوات من الخبرة في حلول التسويق الرقمي.",
+  "servicesTitle": "خدماتنا المهنية للويب وتحسين محركات البحث | ويب إيه بي سي",
+  "servicesDescription": "استكشف خدمات ويب إيه بي سي الشاملة لتصميم الويب، وتحسين محركات البحث، والتسويق الرقمي المصممة لتعزيز وجودك عبر الإنترنت ونمو أعمالك.",
+  "portfolioTitle": "أعمال ويب إيه بي سي | مشاريعنا الناجحة",
+  "portfolioDescription": "تصفح معرض أعمال ويب إيه بي سي الذي يعرض مشاريعنا الناجحة في تصميم الويب وتحسين محركات البحث لمختلف الصناعات.",
+  "seoServicesTitle": "خدمات احترافية لتحسين محركات البحث | ويب إيه بي سي",
+  "seoServicesDescription": "تقدم ويب إيه بي سي خدمات خبيرة في تحسين محركات البحث تحسن رؤية موقعك وترتيبه في محركات البحث. احصل على استراتيجية مخصصة لتحسين محركات البحث الآن.",
+  "webDevTitle": "خدمات تطوير الويب الاحترافية | ويب إيه بي سي",
+  "webDevDescription": "توفر ويب إيه بي سي خدمات تطوير ويب مخصصة بتقنيات حديثة لإنشاء مواقع ويب عالية الأداء وسريعة الاستجابة لعملك.",
+  "wordpressTitle": "تطوير ووردبريس وووكومرس | ويب إيه بي سي",
+  "wordpressDescription": "خدمات تطوير ووردبريس وووكومرس الخبيرة من ويب إيه بي سي. احصل على مواقع ومتاجر إلكترونية مخصصة بتصميم فريد وأداء مثالي.",
+  "localSEOTitle": "خدمات تحسين محركات البحث المحلية | عزز وجودك المحلي | ويب إيه بي سي",
+  "localSEODescription": "تساعد خدمات تحسين محركات البحث المحلية من ويب إيه بي سي عملك على السيطرة على نتائج البحث المحلية وجذب المزيد من العملاء من منطقتك.",
+  "serviceAreasTitle": "مناطق خدمتنا | خدمات تصميم الويب وتحسين محركات البحث الاحترافية | ويب إيه بي سي",
+  "serviceAreasDescription": "توفر ويب إيه بي سي خدمات تصميم الويب والتطوير وتحسين محركات البحث الخبيرة عبر مواقع متعددة بما في ذلك مسقط ودبي وطهران وقزوين. حلول رقمية مخصصة لسوقك المحلي.",
+  "title": "خدمات احترافية لتحسين محركات البحث",
+  "subtitle": "عزز ظهور موقعك وترتيبه من خلال استراتيجيات تحسين محركات البحث الخبيرة لدينا",
+  "onPageSeo": "تحسين الصفحة الداخلية",
+  "offPageSeo": "تحسين خارج الصفحة",
+  "technicalSeo": "تحسين محركات البحث التقني",
+  "contentStrategy": "استراتيجية المحتوى",
+  "keywordResearch": "بحث الكلمات المفتاحية",
+  "competitorAnalysis": "تحليل المنافسين",
+  "localSeo": "تحسين محركات البحث المحلية",
+  "ecommerceSeo": "تحسين محركات البحث للتجارة الإلكترونية",
+  "seoAudit": "تدقيق تحسين محركات البحث",
+  "monthlyReporting": "تقارير شهرية",
+  "linkBuilding": "بناء الروابط",
+  "conversionOptimization": "تحسين معدل التحويل",
+  "specializedSEO": "تحسين محركات البحث المتخصص",
+  "technicalSeoDesc": "تحسين تقني لموقعك لتحسين الأداء وزيادة الترتيب في محركات البحث",
+  "contentStrategyDesc": "إنتاج وتحسين المحتوى عالي الجودة الذي يجذب كلاً من المستخدمين ومحركات البحث",
+  "localSeoDesc": "زيادة ظهور عملك في عمليات البحث المحلية ونتائج خرائط جوجل",
+  "offPageSeoDesc": "إنشاء ملف تعريف روابط قوي باستراتيجية بناء روابط منهجية وطبيعية",
   "feature": {
-    "pageSpeed": "Page load speed optimization",
-    "technicalErrors": "Technical error fixing and crawling issues",
-    "urlStructure": "URL structure and site architecture optimization",
-    "schema": "Schema Markup and structured data implementation",
-    "mobileFriendly": "Mobile optimization and responsive design",
-    "security": "Security and server performance improvement",
-    "keywordResearch": "Specialized keyword research",
-    "qualityContent": "Production of original and valuable content",
-    "titleOptimization": "Title and meta tag optimization",
-    "headings": "Content structuring using H1 to H6 tags",
-    "imageOptimization": "Image and media optimization",
-    "longTermStrategy": "Creation of long-term content strategy",
-    "gmb": "Google My Business profile optimization",
-    "reviews": "Local review and rating management",
-    "localKeywords": "Content optimization for local keywords",
-    "localLinks": "Creation of quality local links",
-    "nearMe": "Optimization for 'near me' searches",
-    "localReports": "Local SEO analytical reports",
-    "linkProfile": "Current link profile analysis",
-    "linkOpportunities": "Identification of quality link building opportunities",
-    "linkableContent": "Production of linkable content",
-    "authorityLinks": "Link building from relevant authoritative sites",
-    "toxicLinks": "Monitoring and neutralizing toxic links",
-    "progressReports": "Regular progress reports"
+    "pageSpeed": "تحسين سرعة تحميل الصفحة",
+    "technicalErrors": "إصلاح الأخطاء التقنية ومشكلات الزحف",
+    "urlStructure": "تحسين بنية URL وهيكل الموقع",
+    "schema": "تنفيذ Schema Markup والبيانات المنظمة",
+    "mobileFriendly": "تحسين للجوال والتصميم المتجاوب",
+    "security": "تحسين الأمان وأداء الخادم",
+    "keywordResearch": "بحث متخصص عن الكلمات المفتاحية",
+    "qualityContent": "إنتاج محتوى أصلي وقيم",
+    "titleOptimization": "تحسين العناوين والعلامات الوصفية",
+    "headings": "هيكلة المحتوى باستخدام علامات H1 إلى H6",
+    "imageOptimization": "تحسين الصور والوسائط",
+    "longTermStrategy": "إنشاء استراتيجية محتوى طويلة المدى",
+    "gmb": "تحسين ملف Google My Business",
+    "reviews": "إدارة التقييمات والتصنيفات المحلية",
+    "localKeywords": "تحسين المحتوى للكلمات المفتاحية المحلية",
+    "localLinks": "إنشاء روابط محلية عالية الجودة",
+    "nearMe": "التحسين لعمليات البحث \"بالقرب مني\"",
+    "localReports": "تقارير تحليلية لتحسين محركات البحث المحلية",
+    "linkProfile": "تحليل ملف الروابط الحالي",
+    "linkOpportunities": "تحديد فرص بناء روابط عالية الجودة",
+    "linkableContent": "إنتاج محتوى قابل للربط",
+    "authorityLinks": "بناء روابط من مواقع موثوقة ذات صلة",
+    "toxicLinks": "مراقبة وتحييد الروابط الضارة",
+    "progressReports": "تقارير دورية للتقدم"
   }
+
 }
