--- a/i18n/en/web-development-services.json
+++ b/i18n/en/web-development-services.json
@@ -1,38 +1,42 @@
 {
-  "webDevelopmentTitle": "Web Development Services",
-  "webDevelopmentDescription": "We offer comprehensive web development services to bring your ideas to life.",
-  "ourServices": "Our Services",
-  "frontendDev": "Frontend Development",
-  "frontendDesc": "We build beautiful and responsive user interfaces.",
-  "backendDev": "Backend Development",
-  "backendDesc": "We develop robust and scalable backend systems.",
-  "feature.uiuxDesign": "UI/UX Design",
-  "feature.reactNextjs": "React & Next.js Development",
-  "feature.responsiveDesign": "Responsive Design",
-  "feature.webVitals": "Web Vitals Optimization",
-  "feature.animations": "Animations & Interactions",
-  "feature.apiIntegration": "API Integration",
-  "feature.restApi": "REST API Development",
-  "feature.python": "Python Development",
-  "feature.nodejs": "Node.js Development",
-  "feature.database": "Database Design & Management",
-  "feature.auth": "Authentication & Authorization",
-  "feature.cloudIntegration": "Cloud Integration",
-  "keywords": "web development, services, react, nextjs",
+  "webDevelopmentTitle": "خدمات تطوير الويب",
+  "webDevelopmentDescription": "نحن نقدم خدمات تطوير الويب الشاملة لتحويل أفكارك إلى واقع.",
+  "ourServices": "خدماتنا",
+  "frontendDev": "تطوير الواجهة الأمامية",
+  "frontendDesc": "نقوم ببناء واجهات مستخدم جميلة ومتجاوبة.",
+  "backendDev": "تطوير الواجهة الخلفية",
+  "backendDesc": "نقوم بتطوير أنظمة خلفية قوية وقابلة للتطوير.",
+  "feature.uiuxDesign": "تصميم واجهة المستخدم/تجربة المستخدم",
+  "feature.reactNextjs": "تطوير React و Next.js",
+  "feature.responsiveDesign": "تصميم متجاوب",
+  "feature.webVitals": "تحسين مقاييس أداء الويب",
+  "feature.animations": "الرسوم المتحركة والتفاعلات",
+  "feature.apiIntegration": "تكامل واجهة برمجة التطبيقات",
+  "feature.restApi": "تطوير واجهة برمجة التطبيقات REST",
+  "feature.python": "تطوير بايثون",
+  "feature.nodejs": "تطوير Node.js",
+  "feature.database": "تصميم وإدارة قواعد البيانات",
+  "feature.auth": "المصادقة والترخيص",
+  "feature.cloudIntegration": "تكامل السحابة",
+  "keywords": "تطوير الويب, خدمات, react, nextjs",
   "webDev": {
-    "title": "Web Development Services",
-    "description": "Professional web development services using modern technologies and best practices",
-    "customSites": "Custom Website Development",
-    "customDesc": "Tailored websites built with modern frameworks and responsive design",
-    "ecommerce": "E-commerce Solutions",
-    "ecommerceDesc": "Online stores with payment integration and inventory management",
-    "cms": "Content Management Systems",
-    "cmsDesc": "Easy-to-use CMS platforms for content management",
-    "api": "API Development",
-    "apiDesc": "RESTful APIs and backend services",
-    "performance": "Performance Optimization",
-    "performanceDesc": "Fast loading websites with optimal performance",
-    "maintenance": "Website Maintenance",
-    "maintenanceDesc": "Ongoing support and website updates"
+    "title": "خدمات تطوير الويب",
+    "description": "خدمات تطوير وب احترافية باستخدام التكنولوجيا الحديثة وأفضل الممارسات",
+    "customSites": "تطوير مواقع مخصصة",
+    "customDesc": "مواقع مخصصة مبنية باستخدام الإطارات الحديثة والتصميم المتجاوب",
+    "ecommerce": "حلول التجارة الإلكترونية",
+    "ecommerceDesc": "متاجر إلكترونية مع تكامل الدفع وإدارة المخزون",
+    "cms": "أنظمة إدارة المحتوى",
+    "cmsDesc": "منصات CMS سهلة الاستخدام لإدارة المحتوى",
+    "api": "تطوير APIs",
+    "apiDesc": "APIs RESTful وخدمات backend",
+    "performance": "تحسين الأداء",
+    "performanceDesc": "مواقع تحميل سريع بأداء مثالي",
+    "maintenance": "صيانة المواقع",
+    "maintenanceDesc": "دعم مستمر وتحديثات الموقع"
+  },
+  "webDevServices": {
+    "title": "خدمات تطوير الويب",
+    "description": "خدمات تطوير الويب الاحترافية بما في ذلك تصميم مواقع مخصصة، إعداد التجارة الإلكترونية، أنظمة CMS، وتحسين الأداء"
   }
 }
