--- a/i18n/fa/about.json
+++ b/i18n/fa/about.json
@@ -1,14 +1,14 @@
 
 {
-  "title": "درباره وب اِی‌بی‌سی",
-  "subtitle": "پیشتاز در دیجیتال مارکتینگ و توسعه وب با بیش از یک دهه تجربه موفق",
-  "mission": "ماموریت ما",
-  "missionText": "در وب اِی‌بی‌سی، ما کسب‌وکارها را در مسیر تحول دیجیتال با تیم متخصص و دانش به‌روز هدایت می‌کنیم. هدف اصلی ما ایجاد ارزش پایدار برای مشتریان خود از طریق راهکارهای نوآورانه و نتیجه‌محور است.",
-  "team": "تیم ما",
-  "ourTeam": "تیم ما",
-  "yearsExperience": "سال تجربه",
-  "successfulProjects": "پروژه موفق",
-  "clientSatisfaction": "رضایت مشتری",
+  "title": "عن ويب اِي‌بی‌سی",
+  "subtitle": "الريادة في التسويق الرقمي وتطوير الويب مع أكثر من عقد من الخبرة الناجحة",
+  "mission": "مهمتنا",
+  "missionText": "في ويب اِي‌بی‌سی، نهدي الشركات خلال رحلة التحول الرقمي مع فريقنا المتخصص ومعرفتنا المحدثة. هدفنا الرئيسي هو خلق قيمة دائمة لعملائنا من خلال الحلول المبتكرة والموجهة نحو النتائج.",
+  "team": "فريقنا",
+  "ourTeam": "فريقنا",
+  "yearsExperience": "سنوات من الخبرة",
+  "successfulProjects": "مشاريع ناجحة",
+  "clientSatisfaction": "رضا العملاء",
   "stats": {
     "years": {
       "value": "10+"
