--- a/i18n/fa/blog.json
+++ b/i18n/fa/blog.json
@@ -1,24 +1,25 @@
+
 {
-  "title": "وبلاگ",
-  "recentPosts": "مطالب اخیر",
-  "readMore": "ادامه مطلب",
-  "popularTopics": "موضوعات محبوب",
-  "categories": "دسته‌بندی‌ها",
-  "searchPlaceholder": "جستجوی مقالات...",
-  "relatedArticles": "مقالات مرتبط",
-  "publishedOn": "منتشر شده در",
-  "minuteRead": "دقیقه مطالعه",
-  "author": "نویسنده",
-  "shareArticle": "اشتراک‌گذاری این مقاله",
-  "tags": "برچسب‌ها",
-  "subscribe": "عضویت در خبرنامه ما",
-  "subscribeDesc": "آخرین مقالات و بینش‌ها را مستقیماً در صندوق ورودی خود دریافت کنید",
-  "blogTitle": "آخرین مقالات و اخبار دیجیتال مارکتینگ",
-  "blogDescription": "مطالعه آخرین مطالب و مقالات ما درباره سئو، طراحی وب و دیجیتال مارکتینگ",
-  "filterBy": "فیلتر بر اساس",
-  "allCategories": "همه دسته‌بندی‌ها",
-  "tableOfContents": "فهرست مطالب",
-  "keyTakeaways": "نکات کلیدی",
-  "faq": "سوالات متداول",
-  "backToBlog": "بازگشت به وبلاگ"
+  "title": "المدونة",
+  "recentPosts": "أحدث المقالات",
+  "readMore": "قراءة المزيد",
+  "popularTopics": "المواضيع الشائعة",
+  "categories": "التصنيفات",
+  "searchPlaceholder": "البحث عن مقالات...",
+  "relatedArticles": "مقالات ذات صلة",
+  "publishedOn": "نشرت في",
+  "minuteRead": "دقيقة للقراءة",
+  "author": "الكاتب",
+  "shareArticle": "مشاركة هذا المقال",
+  "tags": "الوسوم",
+  "subscribe": "اشترك في نشرتنا الإخبارية",
+  "subscribeDesc": "احصل على أحدث المقالات والرؤى مباشرة في بريدك الوارد",
+  "blogTitle": "أحدث مقالات وأخبار التسويق الرقمي",
+  "blogDescription": "اقرأ أحدث المقالات والمدونات عن تحسين محركات البحث وتصميم الويب والتسويق الرقمي",
+  "filterBy": "تصفية حسب",
+  "allCategories": "جميع التصنيفات",
+  "tableOfContents": "جدول المحتويات",
+  "keyTakeaways": "النقاط الرئيسية",
+  "faq": "الأسئلة الشائعة",
+  "backToBlog": "العودة إلى المدونة"
 }
