--- a/i18n/fa/common.json
+++ b/i18n/fa/common.json
@@ -1,60 +1,60 @@
 {
-  "home": "خانه",
-  "portfolio": "نمونه‌کارها",
-  "caseStudies": "مطالعات موردی",
-  "about": "درباره ما",
-  "contact": "تماس با ما",
-  "serviceAreas": "مناطق خدمات",
-  "learnMore": "اطلاعات بیشتر",
-  "viewAllLocations": "مشاهده همه مکان‌ها",
-  "completedProjects": "پروژه‌های تکمیل شده",
-  "happyClients": "مشتریان راضی",
-  "yearsExperience": "سال تجربه",
-  "aboutOurServices": "درباره خدمات ما در",
-  "ourServices": "خدمات ما",
-  "webDesignAndDevelopment": "طراحی و توسعه وب",
-  "viewPortfolio": "مشاهده نمونه کارها",
-  "freeConsultation": "مشاوره رایگان",
-  "allServices": "همه خدمات",
-  "viewDetails": "مشاهده جزئیات",
-  "sendRequest": "ارسال درخواست",
-  "cancel": "لغو",
-  "backToTop": "بازگشت به بالا",
-  "contactViaWhatsApp": "تماس از طریق واتساپ",
-  "viewAll": "مشاهده همه",
-  "contactUs": "تماس با ما",
-  "sendEmail": "ارسال ایمیل",
-  "readMore": "بیشتر بخوانید",
-  "backToPortfolio": "بازگشت به نمونه‌کارها",
-  "backToBlog": "بازگشت به وبلاگ",
-  "viewWebsite": "مشاهده وب‌سایت",
-  "whatsappMessage": "سلام، من از وب‌سایت شما با شما تماس می‌گیرم و می‌خواهم اطلاعات بیشتری دریافت کنم.",
+  "home": "الرئيسية",
+  "services": "الخدمات",
+  "portfolio": "معرض الأعمال",
+  "caseStudies": "دراسات الحالة",
+  "about": "من نحن",
+  "contact": "اتصل بنا",
+  "serviceAreas": "مناطق الخدمة",
+  "learnMore": "اعرف المزيد",
+  "viewAllLocations": "عرض جميع المواقع",
+  "completedProjects": "المشاريع المنجزة",
+  "happyClients": "العملاء الراضون",
+  "yearsExperience": "سنوات الخبرة",
+  "aboutOurServices": "حول خدماتنا في",
+  "ourServices": "خدماتنا",
+  "webDesignAndDevelopment": "تصميم وتطوير المواقع",
+  "viewPortfolio": "عرض الأعمال",
+  "freeConsultation": "استشارة مجانية",
+  "allServices": "جميع الخدمات",
+  "viewDetails": "عرض التفاصيل",
+  "sendRequest": "إرسال طلب",
+  "cancel": "إلغاء",
+  "backToTop": "العودة إلى الأعلى",
+  "contactViaWhatsApp": "التواصل عبر واتساب",
+  "viewAll": "عرض الكل",
+  "contactUs": "اتصل بنا",
+  "sendEmail": "إرسال بريد إلكتروني",
+  "readMore": "قراءة المزيد",
+  "backToPortfolio": "العودة إلى معرض الأعمال",
+  "backToBlog": "العودة إلى المدونة",
+  "viewWebsite": "عرض الموقع",
+  "whatsappMessage": "مرحباً، أتواصل معكم من موقعكم وأرغب في الحصول على مزيد من المعلومات.",
   "notFound": {
-    "title": "صفحه پیدا نشد",
-    "subtitle": "متأسفیم، صفحه‌ای که به دنبال آن هستید وجود ندارد.",
-    "backHome": "بازگشت به خانه",
-    "backPrevious": "بازگشت",
-    "errorNumber": "۴۰۴"
+    "title": "الصفحة غير موجودة",
+    "subtitle": "عذراً، الصفحة التي تبحث عنها غير موجودة.",
+    "backHome": "العودة للرئيسية",
+    "backPrevious": "العودة للخلف",
+    "errorNumber": "٤٠٤"
   },
-  "loading": "در حال بارگذاری",
-  "success": "موفقیت",
-  "error": "خطا",
-  "submit": "ارسال",
-  "search": "جستجو",
-  "filter": "فیلتر",
-  "sortBy": "مرتب‌سازی براساس",
-  "latestFirst": "جدیدترین",
-  "oldestFirst": "قدیمی‌ترین",
-  "resetFilters": "بازنشانی فیلترها",
-  "noResults": "نتیجه‌ای یافت نشد",
-  "tryAgain": "تلاش مجدد",
-  "aboutCompany": "درباره وب‌اِی‌بی‌سی: ما یک آژانس بازاریابی دیجیتال و توسعه وب هستیم.",
-  "blog": "وبلاگ",
-  "services": "خدمات",
-  "company": "شرکت",
-  "resources": "منابع",
-  "copyright": "© {year} وب‌اِی‌بی‌سی. تمامی حقوق محفوظ است.",
-  "privacyPolicy": "سیاست حفظ حریم خصوصی",
-  "termsOfService": "شرایط استفاده",
-  "cookiePolicy": "سیاست کوکی"
+  "loading": "جاري التحميل",
+  "success": "تم بنجاح",
+  "error": "خطأ",
+  "submit": "إرسال",
+  "search": "بحث",
+  "filter": "تصفية",
+  "sortBy": "ترتيب حسب",
+  "latestFirst": "الأحدث أولاً",
+  "oldestFirst": "الأقدم أولاً",
+  "resetFilters": "إعادة ضبط التصفية",
+  "noResults": "لم يتم العثور على نتائج",
+  "tryAgain": "حاول مرة أخرى",
+  "aboutCompany": "عن وب أي بي سي: نحن وكالة تسويق رقمي وتطوير مواقع.",
+  "blog": "المدونة",
+  "company": "الشركة",
+  "resources": "الموارد",
+  "copyright": "© {year} وب أي بي سي. جميع الحقوق محفوظة.",
+  "privacyPolicy": "سياسة الخصوصية",
+  "termsOfService": "شروط الخدمة",
+  "cookiePolicy": "سياسة الكوكيز"
 }
