--- a/i18n/fa/contact.json
+++ b/i18n/fa/contact.json
@@ -1,50 +1,48 @@
 
 {
-  "getInTouch": "تماس با ما",
-  "contactInfo": "اطلاعات تماس",
-  "sendMessage": "پیام خود را ارسال کنید",
-  "officeAddress": "آدرس دفتر",
-  "phoneNumber": "شماره تلفن",
-  "emailAddress": "آدرس ایمیل",
-  "businessHours": "ساعات کاری",
-  "subject": "موضوع",
-  "yourMessage": "پیام شما",
-  "submitMessage": "ارسال پیام",
-  "followUs": "ما را دنبال کنید",
-  "locationMap": "موقعیت ما",
-  "messageSent": "پیام با موفقیت ارسال شد",
-  "messageFailed": "ارسال پیام ناموفق بود",
-  "address": "آدرس",
-  "addressValue": "خیابان آزادی، بلوار کشاورز، پلاک ۱۲۳، تهران، ایران",
-  "phone": "تلفن",
-  "phoneValue": "۰۲۱-۱۲۳۴۵۶۷۸",
-  "email": "ایمیل",
-  "emailValue": "info@webabc.ir",
+  "getInTouch": "اتصل بنا",
+  "contactInfo": "معلومات الاتصال",
+  "sendMessage": "أرسل لنا رسالة",
+  "officeAddress": "عنوان المكتب",
+  "phoneNumber": "رقم الهاتف",
+  "emailAddress": "البريد الإلكتروني",
+  "businessHours": "ساعات العمل",
+  "subject": "الموضوع",
+  "yourMessage": "رسالتك",
+  "submitMessage": "إرسال الرسالة",
+  "followUs": "تابعنا",
+  "locationMap": "موقعنا",
+  "messageSent": "تم إرسال الرسالة بنجاح",
+  "messageFailed": "فشل في إرسال الرسالة",
+  "address": "العنوان",
+  "addressValue": "دبي، الإمارات العربية المتحدة، برج ويب، الطابق 5",
+  "phone": "الهاتف",
+  "phoneValue": "+971 4 123 4567",
+  "email": "البريد الإلكتروني",
+  "emailValue": "info@webabc.ae",
   "consultation": {
-    "title": "درخواست مشاوره رایگان",
-    "description": "فرم زیر را پر کنید و کارشناسان ما به زودی با شما تماس خواهند گرفت.",
-    "fullName": "نام و نام خانوادگی",
-    "phone": "شماره تماس",
-    "email": "ایمیل (اختیاری)",
-    "message": "پیام",
-    "formSubmitted": "فرم ارسال شد",
-    "formSubmittedDesc": "کارشناسان ما به زودی با شما تماس خواهند گرفت.",
-    "fullNameRequired": "نام و نام خانوادگی الزامی است",
-    "phoneRequired": "شماره تماس الزامی است",
-    "emailInvalid": "لطفاً یک آدرس ایمیل معتبر وارد کنید",
-    "messageRequired": "پیام الزامی است",
-    "phoneInvalid": "لطفاً یک شماره تلفن معتبر وارد کنید",
-    "sending": "در حال ارسال...",
-    "errorMessage": "خطایی رخ داد. لطفاً مجدداً تلاش کنید.",
-    "preferredContact": "روش ترجیحی تماس",
-    "preferredTime": "زمان ترجیحی برای تماس",
-    "morning": "صبح",
-    "afternoon": "بعدازظهر",
-    "evening": "عصر",
-    "projectType": "نوع پروژه",
-    "budget": "محدوده بودجه",
-    "deadline": "مهلت پروژه"
-  },
-  "title": "تماس با ما",
-  "description": "برای نیازهای توسعه وب خود با ما تماس بگیرید"
+    "title": "طلب استشارة مجانية",
+    "description": "املأ النموذج أدناه وسيتواصل خبراؤنا معك قريباً.",
+    "fullName": "الاسم الكامل",
+    "phone": "رقم الهاتف",
+    "email": "البريد الإلكتروني (اختياري)",
+    "message": "الرسالة",
+    "formSubmitted": "تم إرسال النموذج",
+    "formSubmittedDesc": "سيتصل بك خبراؤنا قريباً.",
+    "fullNameRequired": "الاسم الكامل مطلوب",
+    "phoneRequired": "رقم الهاتف مطلوب",
+    "emailInvalid": "يرجى إدخال عنوان بريد إلكتروني صالح",
+    "messageRequired": "الرسالة مطلوبة",
+    "phoneInvalid": "يرجى إدخال رقم هاتف صالح",
+    "sending": "جاري الإرسال...",
+    "errorMessage": "حدث خطأ. يرجى المحاولة مرة أخرى.",
+    "preferredContact": "طريقة الاتصال المفضلة",
+    "preferredTime": "الوقت المفضل للاتصال",
+    "morning": "صباحاً",
+    "afternoon": "ظهراً",
+    "evening": "مساءً",
+    "projectType": "نوع المشروع",
+    "budget": "نطاق الميزانية",
+    "deadline": "الموعد النهائي للمشروع"
+  }
 }
