--- a/i18n/fa/cta.json
+++ b/i18n/fa/cta.json
@@ -1,14 +1,14 @@
 
 {
-  "title": "آماده‌اید کسب و کار خود را به سطح بعدی ببرید؟",
-  "description": "با یک مشاوره رایگان، استراتژی اختصاصی سئو و توسعه وب را برای کسب و کار خود دریافت کنید.",
-  "primaryButton": "دریافت مشاوره رایگان",
-  "secondaryButton": "تماس با ما",
-  "contactInfo": "اطلاعات تماس",
-  "address": "آدرس",
-  "phone": "تلفن",
-  "email": "ایمیل",
-  "addressValue": "تهران، خیابان ولیعصر، پلاک ۱۵۶",
-  "phoneValue": "09125811880",
-  "emailValue": "info@webabc.ir"
+  "title": "هل أنت مستعد للارتقاء بعملك إلى المستوى التالي؟",
+  "description": "احصل على استشارة مجانية واستلم استراتيجية مخصصة لتحسين محركات البحث وتطوير الويب لعملك.",
+  "primaryButton": "احصل على استشارة مجانية",
+  "secondaryButton": "اتصل بنا",
+  "contactInfo": "معلومات الاتصال",
+  "address": "العنوان",
+  "phone": "الهاتف",
+  "email": "البريد الإلكتروني",
+  "addressValue": "١٢٣ الشارع الرئيسي، القاهرة، مصر",
+  "phoneValue": "+20 2 1234 5678",
+  "emailValue": "info@webabc.ir.eg"
 }
