--- a/i18n/fa/local-seo.json
+++ b/i18n/fa/local-seo.json
@@ -1,11 +1,11 @@
 {
-  "localSeoTitle": "خدمات سئو محلی",
-  "localSeoDescription": "با خدمات سئوی محلی متخصص ما، توسط مشتریان در منطقه محلی خود دیده شوید.",
-  "feature.gmb": "بهینه سازی Google My Business",
-  "feature.localKeywords": "هدف قرار دادن کلمات کلیدی محلی",
-  "feature.nearMe": "بهینه سازی \"نزدیک من\"",
-  "feature.localLinks": "ساخت لینک محلی",
-  "feature.reviews": "مدیریت نظرات",
-  "feature.localReports": "گزارش سئوی محلی",
-  "keywords": "سئو محلی, Google My Business, نزدیک من, خدمات سئو"
+  "localSeoTitle": "خدمات تحسين محركات البحث المحلية",
+  "localSeoDescription": "تمتع بالظهور لعملائك في منطقتك المحلية من خلال خدمات تحسين محركات البحث المحلية المتخصصة لدينا.",
+  "feature.gmb": "تحسين ملف تعريف نشاطي التجاري على Google",
+  "feature.localKeywords": "استهداف الكلمات المفتاحية المحلية",
+  "feature.nearMe": "تحسين عبارات \"بالقرب مني\"",
+  "feature.localLinks": "بناء الروابط المحلية",
+  "feature.reviews": "إدارة المراجعات",
+  "feature.localReports": "تقارير تحسين محركات البحث المحلية",
+  "keywords": "تحسين محركات البحث المحلية, نشاطي التجاري على جوجل, بالقرب مني, خدمات تحسين محركات البحث"
 }
