--- a/i18n/fa/resources.json
+++ b/i18n/fa/resources.json
@@ -1,33 +1,33 @@
 
 {
-  "seoGuide": "راهنمای سئو",
-  "webDesignGuide": "راهنمای طراحی وب",
-  "specializedArticles": "مقالات تخصصی",
-  "freeTools": "ابزارهای رایگان",
-  "faq": "سوالات متداول",
-  "title": "ابزارها و منابع رایگان",
-  "subtitle": "راهنماها، ابزارها و مقالات مفید",
-  "readMore": "ادامه مطلب",
-  "featuredResources": "منابع برجسته",
-  "popularGuides": "راهنماهای محبوب",
-  "latestArticles": "آخرین مقالات",
-  "downloadNow": "دانلود",
-  "resourcesDesc": "به مجموعه کاملی از ابزارهای رایگان سئو و تولید محتوا دسترسی پیدا کنید",
-  "seoTools": "ابزارهای سئو و بازاریابی دیجیتال",
-  "contentTools": "ابزارهای تولید محتوا",
-  "useTool": "استفاده از ابزار",
-  "serpPreview": "پیش‌نمایش نتایج جستجو",
-  "serpPreviewDesc": "پیش‌نمایش نحوه نمایش صفحه شما در نتایج گوگل و بهینه‌سازی برای نرخ کلیک بهتر",
-  "metaGenerator": "تولید کننده متا تگ",
-  "metaGeneratorDesc": "تگ‌های متا بهینه شده برای سئو و تگ‌های Open Graph برای وبسایت خود بسازید",
-  "paaScaper": "استخراج سوالات متداول",
-  "paaScraperDesc": "سوالات رایجی که مردم درباره کلمات کلیدی شما می‌پرسند را کشف کنید",
-  "utmBuilder": "سازنده لینک UTM",
-  "utmBuilderDesc": "URL های کمپین قابل ردیابی با پارامترهای UTM برای Google Analytics بسازید",
-  "headlineAnalyzer": "تحلیلگر تیتر",
-  "headlineAnalyzerDesc": "تیترهای خود را بر اساس طول، احساس و تأثیر عاطفی امتیاز دهید",
-  "readabilityChecker": "بررسی‌کننده خوانایی",
-  "readabilityCheckerDesc": "خوانایی متن را تحلیل کنید و امتیاز Flesch-Kincaid دریافت کنید",
-  "loremGenerator": "تولید کننده متن لورم",
-  "loremGeneratorDesc": "متن جایگزین قابل سفارشی‌سازی برای طراحی‌ها و نمونه‌های خود بسازید"
+  "seoGuide": "دليل تحسين محركات البحث",
+  "webDesignGuide": "دليل تصميم الويب",
+  "specializedArticles": "مقالات متخصصة",
+  "freeTools": "أدوات مجانية",
+  "faq": "الأسئلة الشائعة",
+  "title": "أدوات وموارد مجانية",
+  "subtitle": "أدلة وأدوات ومقالات مفيدة",
+  "readMore": "قراءة المزيد",
+  "featuredResources": "الموارد المميزة",
+  "popularGuides": "الأدلة الشائعة",
+  "latestArticles": "أحدث المقالات",
+  "downloadNow": "تحميل الآن",
+  "resourcesDesc": "استفد من مجموعتنا الشاملة من أدوات تحسين محركات البحث وإنشاء المحتوى المجانية",
+  "seoTools": "أدوات تحسين محركات البحث والتسويق الرقمي",
+  "contentTools": "أدوات إنشاء المحتوى",
+  "useTool": "استخدم الأداة",
+  "serpPreview": "معاينة نتائج البحث",
+  "serpPreviewDesc": "عاين كيف ستظهر صفحتك في نتائج بحث جوجل وحسّن معدل النقر",
+  "metaGenerator": "مولد الوسوم الوصفية",
+  "metaGeneratorDesc": "أنشئ وسوم ميتا محسّنة لمحركات البحث ووسوم Open Graph لموقعك",
+  "paaScaper": "مستخرج الأسئلة الشائعة",
+  "paaScraperDesc": "اكتشف الأسئلة الشائعة التي يطرحها الناس حول كلماتك المفتاحية",
+  "utmBuilder": "منشئ روابط UTM",
+  "utmBuilderDesc": "أنشئ روابط حملات قابلة للتتبع مع معاملات UTM لـ Google Analytics",
+  "headlineAnalyzer": "محلل العناوين",
+  "headlineAnalyzerDesc": "احصل على تقييم لعناوينك بناءً على الطول والمشاعر والتأثير العاطفي",
+  "readabilityChecker": "مدقق سهولة القراءة",
+  "readabilityCheckerDesc": "حلل سهولة قراءة النص واحصل على درجة Flesch-Kincaid",
+  "loremGenerator": "مولد نص تجريبي",
+  "loremGeneratorDesc": "أنشئ نصوصاً تجريبية قابلة للتخصيص لتصاميمك ونماذجك"
 }
