--- a/i18n/fa/service-areas.json
+++ b/i18n/fa/service-areas.json
@@ -1,71 +1,71 @@
 {
-  "title": "مناطق خدمات",
-  "subtitle": "خدمات حرفه‌ای طراحی وب و سئو در سراسر منطقه",
-  "description": "وب اِی‌بی‌سی خدمات تخصصی طراحی وب، توسعه و سئو را به کسب‌وکارها در مکان‌های مختلف ارائه می‌دهد. تیم ما راهکارهای دیجیتال سفارشی متناسب با بازار محلی شما ارائه می‌دهد.",
-  "ctaTitle": "آماده رشد کسب‌وکار خود هستید؟",
-  "ctaDescription": "همین امروز برای مشاوره رایگان با ما تماس بگیرید و کشف کنید که چگونه می‌توانیم به موفقیت آنلاین کسب‌وکار شما کمک کنیم.",
-  "ctaButton": "دریافت مشاوره رایگان",
-  "locationTitle": "ما خدمات ارائه می‌دهیم به",
-  "whyChooseUs": "چرا وب اِی‌بی‌سی را انتخاب کنیم؟",
-  "localExpertise": "تخصص در بازار محلی",
-  "localExpertiseDesc": "ما چالش‌ها و فرصت‌های منحصر به فرد هر بازاری که خدمت می‌کنیم را درک می‌کنیم",
-  "provenResults": "نتایج اثبات‌شده",
-  "provenResultsDesc": "سابقه پروژه‌های موفق در مناطق مختلف",
-  "multilingualSupport": "پشتیبانی چند زبانه",
-  "multilingualSupportDesc": "ارتباط به زبان دلخواه شما - انگلیسی، عربی و فارسی",
+  "title": "مناطق الخدمة",
+  "subtitle": "خدمات تصميم الويب وتحسين محركات البحث الاحترافية في جميع أنحاء المنطقة",
+  "description": "توفر WebABC خدمات تصميم الويب والتطوير وتحسين محركات البحث للشركات في مواقع متعددة. يقدم فريقنا حلولاً رقمية مخصصة مصممة خصيصاً لسوقك المحلي.",
+  "ctaTitle": "هل أنت مستعد لتنمية عملك؟",
+  "ctaDescription": "اتصل بنا اليوم للحصول على استشارة مجانية واكتشف كيف يمكننا مساعدة عملك على النجاح عبر الإنترنت.",
+  "ctaButton": "احصل على استشارة مجانية",
+  "locationTitle": "نحن نخدم",
+  "whyChooseUs": "لماذا تختار WebABC؟",
+  "localExpertise": "خبرة في السوق المحلي",
+  "localExpertiseDesc": "نحن نفهم التحديات والفرص الفريدة في كل سوق نخدمه",
+  "provenResults": "نتائج مثبتة",
+  "provenResultsDesc": "سجل حافل من المشاريع الناجحة عبر مناطق مختلفة",
+  "multilingualSupport": "دعم متعدد اللغات",
+  "multilingualSupportDesc": "التواصل بلغتك المفضلة - الإنجليزية والعربية والفارسية",
   "locations": [
     {
-      "name": "تهران",
-      "slug": "tehran",
-      "country": "ایران",
-      "description": "ارائه خدمات طراحی وب و سئو پیشرفته به کسب‌وکارها در تهران. ما به شرکت‌های ایرانی کمک می‌کنیم تا حضور قوی آنلاین ایجاد کرده و به طور مؤثر به مخاطبان هدف خود دسترسی پیدا کنند.",
-      "longDescription": "به عنوان آژانس پیشرو طراحی وب و سئو در تهران، ما در کمک به کسب‌وکارهای محلی برای تسلط بر فضای دیجیتال تخصص دارییم. تیم ما ویژگی‌های منحصر به فرد بازار ایران را درک می‌کند و راهکارهای سفارشی ایجاد می‌کند که با مخاطبان هدف شما هماهنگ است.",
+      "name": "مسقط",
+      "slug": "muscat",
+      "country": "عمان",
+      "description": "نقدم خدمات تصميم الويب وتحسين محركات البحث المتطورة للشركات في مسقط. نساعد الشركات العمانية على إنشاء حضور قوي على الإنترنت والوصول إلى جمهورها المستهدف بفعالية.",
+      "longDescription": "باعتبارنا وكالة تصميم الويب وتحسين محركات البحث الرائدة في مسقط، نحن متخصصون في مساعدة الشركات المحلية على السيطرة على المشهد الرقمي. يفهم فريقنا الخصائص الفريدة للسوق العماني ويخلق حلولاً مخصصة تتردد صداها مع جمهورك المستهدف.",
       "services": [
-        "طراحی و توسعه وب",
-        "خدمات سئو",
-        "راهکارهای تجارت الکترونیک",
-        "دیجیتال مارکتینگ",
-        "توسعه وردپرس"
+        "تصميم وتطوير المواقع",
+        "خدمات تحسين محركات البحث",
+        "حلول التجارة الإلكترونية",
+        "التسويق الرقمي",
+        "تطوير ووردبريس"
       ],
-      "image": "/images/locations/tehran.jpg",
+      "image": "/images/locations/muscat.jpg",
       "benefits": [
-        "تخصص در بازار محلی تهران",
-        "پشتیبانی زبان فارسی و انگلیسی",
-        "طراحی ریسپانسیو موبایل فرست",
-        "سرعت بارگذاری بهینه شده برای ایران",
-        "پشتیبانی و نگهداری مداوم"
+        "خبرة السوق المحلي في مسقط",
+        "دعم اللغة العربية والإنجليزية",
+        "تصاميم سريعة الاستجابة للموبايل",
+        "سرعة تحميل محسّنة لعمان",
+        "الدعم والصيانة المستمرة"
       ],
       "stats": {
-        "projects": "۸۰+",
-        "clients": "۶۰+",
-        "experience": "۷+"
+        "projects": "50+",
+        "clients": "35+",
+        "experience": "5+"
       }
     },
     {
-      "name": "قزوین",
-      "slug": "qazvin",
-      "country": "ایران",
-      "description": "ارائه راهکارهای دیجیتال حرفه‌ای به کسب‌وکارها در قزوین. خدمات ما به شرکت‌های مستقر در قزوین کمک می‌کند تا با راهکارهای وب نوآورانه در بازار رقابتی موفق شوند.",
-      "longDescription": "محیط کسب‌وکار پویای قزوین نیازمند حضور دیجیتال استثنایی است. ما وب‌سایت‌های خیره‌کننده ایجاد می‌کنیم و استراتژی‌های قدرتمند سئو را پیاده‌سازی می‌کنیم که به کسب‌وکار شما کمک می‌کند در یکی از رقابتی‌ترین بازارها متمایز شود.",
+      "name": "دبي",
+      "slug": "dubai",
+      "country": "الإمارات العربية المتحدة",
+      "description": "تقديم حلول رقمية متميزة للشركات في دبي. تساعد خدماتنا الشركات المقيمة في الإمارات على المنافسة في سوق دبي الديناميكي بحلول ويب مبتكرة.",
+      "longDescription": "تتطلب بيئة الأعمال السريعة في دبي حضورًا رقميًا استثنائيًا. نحن ننشئ مواقع ويب مذهلة وننفذ استراتيجيات تحسين محركات بحث قوية تساعد عملك على التميز في واحدة من أكثر الأسواق تنافسية في العالم.",
       "services": [
-        "توسعه وب سفارشی",
-        "سئو محلی",
-        "توسعه اپلیکیشن موبایل",
-        "استراتژی برند",
-        "بازاریابی محتوا"
+        "تطوير الويب المخصص",
+        "تحسين محركات البحث المحلية",
+        "تطوير تطبيقات الموبايل",
+        "استراتيجية العلامة التجارية",
+        "تسويق المحتوى"
       ],
-      "image": "/images/locations/qazvin.jpg",
+      "image": "/images/locations/dubai.jpg",
       "benefits": [
-        "درک فرهنگ کسب‌وکار قزوین",
-        "راهکارهای وب‌سایت چند زبانه",
-        "تخصص در تجارت الکترونیک",
-        "استراتژی‌های دیجیتال نتیجه‌محور",
-        "پشتیبانی ۲۴/۷"
+        "فهم ثقافة الأعمال في الإمارات",
+        "حلول المواقع متعددة اللغات",
+        "خبرة في التجارة الإلكترونية لسوق دبي",
+        "استراتيجيات رقمية تركز على النتائج",
+        "دعم العملاء 24/7"
       ],
       "stats": {
-        "projects": "۴۵+",
-        "clients": "۳۵+",
-        "experience": "۵+"
+        "projects": "75+",
+        "clients": "50+",
+        "experience": "6+"
       }
     }
   ]
