--- a/i18n/en/consultation.json
+++ b/i18n/en/consultation.json
@@ -1,12 +1,12 @@
 {
-  "formSubmitted": "Form submitted successfully",
-  "formSubmittedDesc": "We will contact you as soon as possible.",
-  "title": "Request a Consultation",
-  "description": "Fill out the form below to request a consultation.",
-  "fullName": "Full Name",
-  "phone": "Phone Number",
-  "email": "Email Address",
-  "message": "Message",
-  "cancel": "Cancel",
-  "sendRequest": "Send Request"
+  "formSubmitted": "تم إرسال النموذج بنجاح",
+  "formSubmittedDesc": "سنتواصل معك في أقرب وقت ممكن.",
+  "title": "طلب استشارة",
+  "description": "املأ النموذج أدناه لطلب استشارة.",
+  "fullName": "الاسم الكامل",
+  "phone": "رقم الهاتف",
+  "email": "البريد الإلكتروني",
+  "message": "الرسالة",
+  "cancel": "إلغاء",
+  "sendRequest": "إرسال الطلب"
 }
