--- a/i18n/en/contact.json
+++ b/i18n/en/contact.json
@@ -1,50 +1,48 @@
 
 {
-  "getInTouch": "Get In Touch",
-  "contactInfo": "Contact Information",
-  "sendMessage": "Send Us A Message",
-  "officeAddress": "Office Address",
-  "phoneNumber": "Phone Number",
-  "emailAddress": "Email Address",
-  "businessHours": "Business Hours",
-  "subject": "Subject",
-  "yourMessage": "Your Message",
-  "submitMessage": "Submit Message",
-  "followUs": "Follow Us",
-  "locationMap": "Our Location",
-  "messageSent": "Message Sent Successfully",
-  "messageFailed": "Failed to send message",
-  "address": "Address",
-  "addressValue": "123 Main St, Suite 500, New York, NY 10001, USA",
-  "phone": "Phone",
-  "phoneValue": "+1 (555) 123-4567",
-  "email": "Email",
-  "emailValue": "info@webabc.ir",
+  "getInTouch": "اتصل بنا",
+  "contactInfo": "معلومات الاتصال",
+  "sendMessage": "أرسل لنا رسالة",
+  "officeAddress": "عنوان المكتب",
+  "phoneNumber": "رقم الهاتف",
+  "emailAddress": "البريد الإلكتروني",
+  "businessHours": "ساعات العمل",
+  "subject": "الموضوع",
+  "yourMessage": "رسالتك",
+  "submitMessage": "إرسال الرسالة",
+  "followUs": "تابعنا",
+  "locationMap": "موقعنا",
+  "messageSent": "تم إرسال الرسالة بنجاح",
+  "messageFailed": "فشل في إرسال الرسالة",
+  "address": "العنوان",
+  "addressValue": "دبي، الإمارات العربية المتحدة، برج ويب، الطابق 5",
+  "phone": "الهاتف",
+  "phoneValue": "+971 4 123 4567",
+  "email": "البريد الإلكتروني",
+  "emailValue": "info@webabc.ae",
   "consultation": {
-    "title": "Request Free Consultation",
-    "description": "Fill in the form below and our experts will contact you shortly.",
-    "fullName": "Full Name",
-    "phone": "Phone Number",
-    "email": "Email (Optional)",
-    "message": "Message",
-    "formSubmitted": "Form Submitted",
-    "formSubmittedDesc": "Our experts will contact you soon.",
-    "fullNameRequired": "Full name is required",
-    "phoneRequired": "Phone number is required",
-    "emailInvalid": "Please enter a valid email address",
-    "messageRequired": "Message is required",
-    "phoneInvalid": "Please enter a valid phone number",
-    "sending": "Sending...",
-    "errorMessage": "An error occurred. Please try again.",
-    "preferredContact": "Preferred contact method",
-    "preferredTime": "Preferred time for contact",
-    "morning": "Morning",
-    "afternoon": "Afternoon",
-    "evening": "Evening",
-    "projectType": "Project type",
-    "budget": "Budget range",
-    "deadline": "Project deadline"
-  },
-  "title": "Contact Us",
-  "description": "Get in touch with us for your web development needs"
+    "title": "طلب استشارة مجانية",
+    "description": "املأ النموذج أدناه وسيتواصل خبراؤنا معك قريباً.",
+    "fullName": "الاسم الكامل",
+    "phone": "رقم الهاتف",
+    "email": "البريد الإلكتروني (اختياري)",
+    "message": "الرسالة",
+    "formSubmitted": "تم إرسال النموذج",
+    "formSubmittedDesc": "سيتصل بك خبراؤنا قريباً.",
+    "fullNameRequired": "الاسم الكامل مطلوب",
+    "phoneRequired": "رقم الهاتف مطلوب",
+    "emailInvalid": "يرجى إدخال عنوان بريد إلكتروني صالح",
+    "messageRequired": "الرسالة مطلوبة",
+    "phoneInvalid": "يرجى إدخال رقم هاتف صالح",
+    "sending": "جاري الإرسال...",
+    "errorMessage": "حدث خطأ. يرجى المحاولة مرة أخرى.",
+    "preferredContact": "طريقة الاتصال المفضلة",
+    "preferredTime": "الوقت المفضل للاتصال",
+    "morning": "صباحاً",
+    "afternoon": "ظهراً",
+    "evening": "مساءً",
+    "projectType": "نوع المشروع",
+    "budget": "نطاق الميزانية",
+    "deadline": "الموعد النهائي للمشروع"
+  }
 }
