--- a/i18n/en/home.json
+++ b/i18n/en/home.json
@@ -1,33 +1,33 @@
 
 {
-  "heroTitle": "WebABC | Professional SEO and Web Design Services",
-  "heroDescription": "Provider of specialized SEO and search engine optimization services, web design and web application development with the latest technologies",
-  "heroKeywords": "website design, SEO, site optimization, web design, digital marketing, WordPress",
+  "heroTitle": "ويب إيه بي سي | خدمات احترافية لتحسين محركات البحث وتصميم الويب",
+  "heroDescription": "مزود خدمات متخصصة في تحسين محركات البحث وتقنيات السيو، تصميم الويب وتطوير تطبيقات الويب بأحدث التقنيات",
+  "heroKeywords": "تصميم مواقع، سيو، تحسين المواقع، تصميم ويب، تسويق رقمي، ووردبريس",
   "hero": {
-    "title": "Elevate Your Digital Presence with Expert Web Solutions",
-    "description": "We help businesses grow online with professional web development and SEO strategies that deliver real results.",
-    "primaryCta": "Explore Services",
-    "secondaryCta": "View Portfolio",
-    "imageAlt": "Digital marketing and web development illustration"
+    "title": "ارفع حضورك الرقمي مع حلول ويب خبيرة",
+    "description": "نساعد الشركات على النمو عبر الإنترنت من خلال تطوير الويب الاحترافي واستراتيجيات تحسين محركات البحث التي تقدم نتائج حقيقية.",
+    "primaryCta": "استكشف الخدمات",
+    "secondaryCta": "عرض معرض الأعمال",
+    "imageAlt": "رسم توضيحي للتسويق الرقمي وتطوير الويب"
   },
   "footer": {
-    "companySince": "© 2024 WebABC. All rights reserved.",
-    "aboutCompany": "WebABC, specializing in SEO services and web development with over 10 years of experience in the digital marketing industry.",
-    "services": "Services",
-    "company": "Company",
-    "resources": "Resources",
-    "privacyPolicy": "Privacy Policy",
-    "termsOfService": "Terms of Service",
-    "cookiePolicy": "Cookie Policy",
-    "address": "Address",
-    "phone": "Phone",
-    "email": "Email",
-    "followUs": "Follow Us",
-    "newsletter": "Newsletter",
-    "subscribePrompt": "Subscribe to receive our latest news",
-    "subscribeButton": "Subscribe",
-    "yourEmail": "Your email address",
-    "contactInfo": "Contact Information",
-    "quickLinks": "Quick Links"
+    "companySince": "© 2024 ويب إيه بي سي. جميع الحقوق محفوظة.",
+    "aboutCompany": "ويب إيه بي سي، متخصصة في خدمات تحسين محركات البحث وتطوير الويب مع أكثر من 10 سنوات من الخبرة في صناعة التسويق الرقمي.",
+    "services": "الخدمات",
+    "company": "الشركة",
+    "resources": "الموارد",
+    "privacyPolicy": "سياسة الخصوصية",
+    "termsOfService": "شروط الخدمة",
+    "cookiePolicy": "سياسة ملفات تعريف الارتباط",
+    "address": "العنوان",
+    "phone": "الهاتف",
+    "email": "البريد الإلكتروني",
+    "followUs": "تابعنا",
+    "newsletter": "النشرة الإخبارية",
+    "subscribePrompt": "اشترك لتلقي أحدث أخبارنا",
+    "subscribeButton": "اشتراك",
+    "yourEmail": "عنوان بريدك الإلكتروني",
+    "contactInfo": "معلومات الاتصال",
+    "quickLinks": "روابط سريعة"
   }
 }
