--- a/i18n/en/portfolio.json
+++ b/i18n/en/portfolio.json
@@ -1,85 +1,81 @@
 
 {
-  "title": "Our Portfolio",
-  "description": "Explore our successful projects across various industries",
-  "allProjects": "All Projects",
-  "webDesign": "Web Design",
-  "ecommerce": "E-commerce",
-  "seoProjects": "SEO Projects",
-  "mobileApps": "Mobile Apps",
-  "client": "Client",
-  "duration": "Duration",
-  "technologies": "Technologies",
-  "category": "Category",
-  "challenge": "Challenge",
-  "solution": "Solution",
-  "results": "Results",
-  "testimonial": "Client Testimonial",
-  "relatedProjects": "Related Projects",
-  "viewDetails": "View Details",
-  "viewProject": "View Project",
-  "projectDetails": "Project Details",
-  "projectOverview": "Project Overview",
+  "title": "معرض أعمالنا",
+  "description": "استكشف مشاريعنا الناجحة عبر مختلف الصناعات",
+  "allProjects": "جميع المشاريع",
+  "webDesign": "تصميم الويب",
+  "ecommerce": "التجارة الإلكترونية",
+  "seoProjects": "مشاريع تحسين محركات البحث",
+  "mobileApps": "تطبيقات الجوال",
+  "client": "العميل",
+  "duration": "المدة",
+  "technologies": "التقنيات",
+  "category": "الفئة",
+  "challenge": "التحدي",
+  "solution": "الحل",
+  "results": "النتائج",
+  "testimonial": "شهادة العميل",
+  "relatedProjects": "مشاريع ذات صلة",
   "caseStudies": {
-    "title": "Case Studies",
-    "subtitle": "Success Stories and Case Studies",
-    "description": "Explore our case studies to see the journey from initial challenges to measurable results. Each case study demonstrates our commitment to delivering value.",
-    "challenge": "Challenge",
-    "solution": "Solution",
-    "results": "Results",
-    "downloadHint": "Want to learn more about our approach and results?",
-    "downloadFull": "Download Full Case Studies",
-    "contactForMore": "Contact Us For More Information",
+    "title": "دراسات الحالة",
+    "subtitle": "قصص النجاح ودراسات الحالة",
+    "description": "استكشف دراسات الحالة لدينا لرؤية الرحلة من التحديات الأولية إلى النتائج القابلة للقياس. تظهر كل دراسة حالة التزامنا بتقديم القيمة.",
+    "challenge": "التحدي",
+    "solution": "الحل",
+    "results": "النتائج",
+    "downloadHint": "هل تريد معرفة المزيد عن نهجنا ونتائجنا؟",
+    "downloadFull": "تنزيل دراسات الحالة الكاملة",
+    "contactForMore": "اتصل بنا لمزيد من المعلومات",
     "ecommerceCase": {
-      "title": "200% Increase in Online Sales with SEO Optimization",
-      "category": "Case Study: Online Store",
-      "challenge": "A home appliance online store had quality products but low traffic and sales. The main issue was lack of proper search engine optimization and poor user experience.",
-      "solution": "Our team designed a comprehensive strategy including technical site optimization, content structure improvement, information architecture correction, and creation of dedicated landing pages for popular products.",
-      "results1": "200% increase in online sales over 6 months",
-      "results2": "150% improvement in organic traffic from Google",
-      "results3": "30% increase in conversion rate",
-      "results4": "25% decrease in bounce rate",
-      "testimonial": "Partnering with WebABC was one of our best business decisions. The results of our site optimization far exceeded our expectations.",
-      "imageAlt": "Online store sales growth chart after SEO optimization by WebABC",
-      "resultsImageAlt": "Keyword ranking improvement results for online store after SEO implementation by WebABC"
+      "title": "زيادة 200% في المبيعات عبر الإنترنت مع تحسين محركات البحث",
+      "category": "دراسة حالة: متجر عبر الإنترنت",
+      "challenge": "كان لدى متجر أجهزة منزلية عبر الإنترنت منتجات عالية الجودة ولكن حركة مرور ومبيعات منخفضة. كانت المشكلة الرئيسية هي عدم وجود تحسين مناسب لمحركات البحث وتجربة مستخدم سيئة.",
+      "solution": "صمم فريقنا استراتيجية شاملة تتضمن التحسين التقني للموقع، وتحسين هيكل المحتوى، وتصحيح بنية المعلومات، وإنشاء صفحات هبوط مخصصة للمنتجات الشائعة.",
+      "results1": "زيادة بنسبة 200% في المبيعات عبر الإنترنت خلال 6 أشهر",
+      "results2": "تحسن بنسبة 150% في حركة المرور العضوية من جوجل",
+      "results3": "زيادة بنسبة 30% في معدل التحويل",
+      "results4": "انخفاض بنسبة 25% في معدل الارتداد",
+      "testimonial": "كانت الشراكة مع ويب إيه بي سي أحد أفضل قراراتنا التجارية. تجاوزت نتائج تحسين موقعنا توقعاتنا بكثير.",
+      "imageAlt": "مخطط نمو مبيعات المتجر عبر الإنترنت بعد تحسين محركات البحث بواسطة ويب إيه بي سي",
+      "resultsImageAlt": "نتائج تحسين ترتيب الكلمات الرئيسية للمتجر عبر الإنترنت بعد تنفيذ تحسين محركات البحث بواسطة ويب إيه بي سي"
     },
     "wordpressCase": {
-      "title": "Brand Relaunch with Custom WordPress Website",
-      "category": "Case Study: WordPress Development",
-      "challenge": "A beauty brand needed a complete digital transformation of their outdated website that was difficult to update and wasn't generating leads or sales.",
-      "solution": "We developed a custom WordPress website with a premium theme, integrated e-commerce functionality, and implemented a content strategy focused on product education and beauty advice.",
-      "results1": "75% increase in average time on site",
-      "results2": "180% growth in newsletter subscriptions",
-      "results3": "95% increase in online product inquiries",
-      "testimonial": "The WebABC team delivered a website that perfectly represents our brand identity. The site is not only beautiful but also user-friendly and has significantly boosted our digital presence.",
-      "imageAlt": "WordPress website redesign for beauty brand showing responsive layout on multiple devices",
-      "resultsImageAlt": "Analytics dashboard showing improvements in user engagement metrics after website redesign"
+      "title": "إعادة إطلاق العلامة التجارية مع موقع ووردبريس مخصص",
+      "category": "دراسة حالة: تطوير ووردبريس",
+      "challenge": "كانت علامة تجارية للجمال بحاجة إلى تحول رقمي كامل لموقعها القديم الذي كان من الصعب تحديثه ولم يكن يولد عملاء محتملين أو مبيعات.",
+      "solution": "قمنا بتطوير موقع ووردبريس مخصص بقالب متميز، ودمج وظائف التجارة الإلكترونية، وتنفيذ استراتيجية محتوى تركز على تعليم المنتج ونصائح الجمال.",
+      "results1": "زيادة بنسبة 75% في متوسط الوقت على الموقع",
+      "results2": "نمو بنسبة 180% في اشتراكات النشرة الإخبارية",
+      "results3": "زيادة بنسبة 95% في استفسارات المنتج عبر الإنترنت",
+      "testimonial": "قدم فريق ويب إيه بي سي موقعًا يمثل هوية علامتنا التجارية بشكل مثالي. الموقع ليس جميلاً فحسب، بل سهل الاستخدام أيضًا وقد عزز وجودنا الرقمي بشكل كبير.",
+      "imageAlt": "إعادة تصميم موقع ووردبريس لعلامة تجارية للجمال يعرض تخطيطًا متجاوبًا على أجهزة متعددة",
+      "resultsImageAlt": "لوحة تحليلات تظهر تحسينات في مقاييس مشاركة المستخدم بعد إعادة تصميم الموقع"
     },
     "localSeoCase": {
-      "title": "500% More Appointments Through Local SEO Strategy",
-      "category": "Case Study: Local SEO",
-      "challenge": "A dental clinic was struggling to attract local patients despite offering excellent services. Their online presence was minimal, and they were outranked by competitors in local searches.",
-      "solution": "We implemented a comprehensive local SEO strategy including Google Business Profile optimization, local citation building, review management, and location-specific content creation.",
-      "results1": "500% increase in appointment bookings within 4 months",
-      "results2": "Top 3 rankings for all major local keywords",
-      "results3": "300% improvement in website traffic from local searches",
-      "results4": "4.9/5 average rating with over 120 new patient reviews",
-      "testimonial": "The local SEO campaign transformed our business. We're now booked weeks in advance and have had to hire additional staff to handle the growth. I highly recommend WebABC's local SEO services.",
-      "imageAlt": "Google Maps showing top ranking for dental clinic after local SEO optimization",
-      "resultsImageAlt": "Chart showing growth in local search visibility and appointment bookings after SEO implementation"
+      "title": "500% المزيد من المواعيد من خلال استراتيجية تحسين محركات البحث المحلية",
+      "category": "دراسة حالة: تحسين محركات البحث المحلية",
+      "challenge": "كانت عيادة أسنان تكافح لجذب المرضى المحليين رغم تقديمها خدمات ممتازة. كان وجودها عبر الإنترنت ضئيلًا، وكان ترتيبها أدنى من المنافسين في عمليات البحث المحلية.",
+      "solution": "قمنا بتنفيذ استراتيجية شاملة لتحسين محركات البحث المحلية تشمل تحسين ملف جوجل للأعمال، وبناء استشهادات محلية، وإدارة المراجعات، وإنشاء محتوى خاص بالموقع.",
+      "results1": "زيادة بنسبة 500% في حجز المواعيد خلال 4 أشهر",
+      "results2": "ترتيبات ضمن أفضل 3 نتائج لجميع الكلمات الرئيسية المحلية الرئيسية",
+      "results3": "تحسين بنسبة 300% في حركة مرور الموقع من عمليات البحث المحلية",
+      "results4": "متوسط تقييم 4.9/5 مع أكثر من 120 مراجعة من مرضى جدد",
+      "testimonial": "لقد حولت حملة تحسين محركات البحث المحلية أعمالنا. نحن الآن محجوزون قبل أسابيع واضطررنا إلى توظيف موظفين إضافيين للتعامل مع النمو. أوصي بشدة بخدمات تحسين محركات البحث المحلية من ويب إيه بي سي.",
+      "imageAlt": "خرائط جوجل تظهر ترتيبًا متقدمًا لعيادة أسنان بعد تحسين محركات البحث المحلية",
+      "resultsImageAlt": "مخطط يوضح نمو الرؤية في البحث المحلي وحجوزات المواعيد بعد تنفيذ تحسين محركات البحث"
     },
     "webDevCase": {
-      "title": "React-based Financial Platform with 99.9% Uptime",
-      "category": "Case Study: Web Application Development",
-      "challenge": "A fintech startup needed a secure, scalable web application for financial data analysis and reporting, with strict requirements for performance and reliability.",
-      "solution": "We developed a custom React-based web application with a Node.js backend, implementing advanced data visualization, real-time data processing, and bank-level security protocols.",
-      "results1": "99.9% uptime since launch",
-      "results2": "90% faster data processing compared to previous solution",
-      "results3": "Successfully passed external security audit with zero critical findings",
-      "results4": "Scalable architecture supporting 10x user growth without performance degradation",
-      "testimonial": "WebABC delivered a robust platform that has been crucial to our business growth. The attention to detail, especially around security and performance optimization, demonstrated their expertise in financial application development.",
-      "imageAlt": "Dashboard interface of the React financial platform showing data visualization components",
-      "resultsImageAlt": "Performance metrics showing system uptime and response time improvement after deployment"
+      "title": "منصة مالية قائمة على React بنسبة تشغيل 99.9%",
+      "category": "دراسة حالة: تطوير تطبيق ويب",
+      "challenge": "كانت شركة ناشئة في مجال التكنولوجيا المالية بحاجة إلى تطبيق ويب آمن وقابل للتوسع لتحليل البيانات المالية وإعداد التقارير، مع متطلبات صارمة للأداء والموثوقية.",
+      "solution": "قمنا بتطوير تطبيق ويب مخصص قائم على React مع خلفية Node.js، وتنفيذ تصور متقدم للبيانات، ومعالجة البيانات في الوقت الفعلي، وبروتوكولات أمان على مستوى البنوك.",
+      "results1": "نسبة تشغيل 99.9% منذ الإطلاق",
+      "results2": "معالجة بيانات أسرع بنسبة 90% مقارنة بالحل السابق",
+      "results3": "اجتياز تدقيق أمني خارجي بنجاح بدون نتائج حرجة",
+      "results4": "بنية قابلة للتوسع تدعم نمو المستخدمين بمقدار 10 أضعاف دون تدهور الأداء",
+      "testimonial": "قدمت ويب إيه بي سي منصة قوية كانت حاسمة لنمو أعمالنا. أظهر الاهتمام بالتفاصيل، خاصة حول تحسين الأمان والأداء، خبرتهم في تطوير التطبيقات المالية.",
+      "imageAlt": "واجهة لوحة التحكم للمنصة المالية React تعرض مكونات تصور البيانات",
+      "resultsImageAlt": "مقاييس الأداء التي تظهر وقت التشغيل للنظام وتحسين وقت الاستجابة بعد النشر"
     }
   }
 }
