--- a/i18n/fa/caseStudies.json
+++ b/i18n/fa/caseStudies.json
@@ -1,62 +1,62 @@
 
 {
-  "title": "مطالعات موردی",
-  "description": "مطالعات موردی ما را بررسی کنید تا مسیر از چالش‌های اولیه تا نتایج قابل اندازه‌گیری را ببینید. هر مطالعه موردی نشان‌دهنده تعهد ما به ارائه ارزش است.",
-  "challenge": "چالش",
-  "solution": "راه حل",
-  "results": "نتایج",
-  "downloadHint": "می‌خواهید درباره رویکرد و دستاوردهای ما بیشتر بدانید؟",
-  "downloadFull": "دانلود مطالعات موردی کامل",
-  "contactForMore": "برای اطلاعات بیشتر با ما تماس بگیرید",
+  "title": "دراسات الحالة",
+  "description": "استكشف دراسات الحالة لدينا لرؤية الرحلة من التحديات الأولية إلى النتائج القابلة للقياس. تظهر كل دراسة حالة التزامنا بتقديم القيمة.",
+  "challenge": "التحدي",
+  "solution": "الحل",
+  "results": "النتائج",
+  "downloadHint": "هل تريد معرفة المزيد عن نهجنا ونتائجنا؟",
+  "downloadFull": "تحميل دراسات الحالة الكاملة",
+  "contactForMore": "اتصل بنا للحصول على مزيد من المعلومات",
   "ecommerceCase": {
-    "title": "افزایش ۲۰۰٪ فروش آنلاین با سئو",
-    "category": "مطالعه موردی: فروشگاه آنلاین",
-    "challenge": "یک فروشگاه آنلاین لوازم خانگی محصولات با کیفیتی داشت اما ترافیک و فروش کمی داشت. مشکل اصلی عدم وجود سئو مناسب و تجربه کاربری ضعیف بود.",
-    "solution": "تیم ما یک استراتژی جامع شامل بهینه‌سازی فنی سایت، بهبود ساختار محتوا، اصلاح معماری اطلاعات و ایجاد صفحات فرود سفارشی برای محصولات پرطرفدار طراحی کرد.",
-    "results1": "افزایش ۲۰۰٪ فروش آنلاین طی ۶ ماه",
-    "results2": "بهبود ۱۵۰٪ در ترافیک ارگانیک از گوگل",
-    "results3": "افزایش ۳۰٪ در نرخ تبدیل",
-    "results4": "کاهش ۲۵٪ در نرخ پرش",
-    "testimonial": "همکاری با وب اِی‌بی‌سی یکی از بهترین تصمیمات تجاری ما بود. نتایج بهینه‌سازی سایت ما از انتظارات ما بسیار فراتر رفت.",
-    "imageAlt": "نمودار رشد فروش فروشگاه آنلاین پس از سئو توسط وب اِی‌بی‌سی",
-    "resultsImageAlt": "نتایج رتبه‌بندی کلمات کلیدی فروشگاه آنلاین پس از اجرای سئو توسط وب اِی‌بی‌سی"
+    "title": "زيادة 200٪ في المبيعات عبر الإنترنت مع تحسين محركات البحث",
+    "category": "دراسة حالة: متجر عبر الإنترنت",
+    "challenge": "كان لدى متجر الأجهزة المنزلية عبر الإنترنت منتجات عالية الجودة ولكن حركة مرور ومبيعات منخفضة. كانت المشكلة الرئيسية هي عدم وجود تحسين مناسب لمحركات البحث وتجربة مستخدم سيئة.",
+    "solution": "صمم فريقنا استراتيجية شاملة تشمل تحسين الموقع التقني، وتحسين بنية المحتوى، وتصحيح بنية المعلومات، وإنشاء صفحات هبوط مخصصة للمنتجات الشائعة.",
+    "results1": "زيادة 200٪ في المبيعات عبر الإنترنت خلال 6 أشهر",
+    "results2": "تحسن بنسبة 150٪ في حركة المرور العضوية من جوجل",
+    "results3": "زيادة 30٪ في معدل التحويل",
+    "results4": "انخفاض 25٪ في معدل الارتداد",
+    "testimonial": "كان التعاون مع ويب أ ب ج أحد أفضل قرارات أعمالنا. تجاوزت نتائج تحسين موقعنا توقعاتنا بكثير.",
+    "imageAlt": "مخطط نمو مبيعات المتجر عبر الإنترنت بعد تحسين محركات البحث بواسطة ويب أ ب ج",
+    "resultsImageAlt": "نتائج تحسين ترتيب الكلمات الرئيسية للمتجر عبر الإنترنت بعد تنفيذ تحسين محركات البحث بواسطة ويب أ ب ج"
   },
   "wordpressCase": {
-    "title": "راه‌اندازی مجدد برند با وب‌سایت وردپرس سفارشی",
-    "category": "مطالعه موردی: توسعه وردپرس",
-    "challenge": "یک برند زیبایی نیاز به تحول دیجیتال کامل وبسایت قدیمی خود داشت که به‌روزرسانی آن دشوار بود و منجر به تولید سرنخ یا فروش نمی‌شد.",
-    "solution": "ما یک سایت وردپرس سفارشی با یک قالب متمایز توسعه دادیم، قابلیت تجارت الکترونیک را یکپارچه کردیم و یک استراتژی محتوا با تمرکز بر آموزش محصول و نکات زیبایی را اجرا کردیم.",
-    "results1": "افزایش ۷۵٪ در میانگین زمان حضور در سایت",
-    "results2": "رشد ۱۸۰٪ در اشتراک خبرنامه",
-    "results3": "افزایش ۹۵٪ در استعلام‌های آنلاین محصول",
-    "testimonial": "تیم وب اِی‌بی‌سی وبسایتی را تحویل داد که به طور کامل نشان‌دهنده هویت برند ما است. سایت نه تنها زیباست بلکه استفاده از آن آسان است و حضور دیجیتالی ما را به طور قابل توجهی افزایش داده است.",
-    "imageAlt": "طراحی مجدد سایت وردپرس برند زیبایی با نمایش چیدمان واکنش‌گرا در دستگاه‌های مختلف",
-    "resultsImageAlt": "داشبورد تحلیلی که بهبود شاخص‌های مشارکت کاربر را پس از طراحی مجدد سایت نشان می‌دهد"
+    "title": "إعادة إطلاق العلامة التجارية مع موقع ووردبريس مخصص",
+    "category": "دراسة حالة: تطوير ووردبريس",
+    "challenge": "احتاجت علامة تجارية للجمال إلى تحول رقمي كامل لموقعها القديم الذي كان من الصعب تحديثه ولم يكن ينتج عملاء محتملين أو مبيعات.",
+    "solution": "قمنا بتطوير موقع ووردبريس مخصص مع قالب متميز، ودمج وظائف التجارة الإلكترونية، وتنفيذ استراتيجية محتوى تركز على تعليم المنتج ونصائح الجمال.",
+    "results1": "زيادة بنسبة 75٪ في متوسط وقت البقاء على الموقع",
+    "results2": "نمو بنسبة 180٪ في اشتراكات النشرة الإخبارية",
+    "results3": "زيادة بنسبة 95٪ في استفسارات المنتجات عبر الإنترنت",
+    "testimonial": "قدم فريق ويب أ ب ج موقع ويب يمثل هوية علامتنا التجارية بشكل مثالي. الموقع ليس جميلاً فحسب، بل سهل الاستخدام أيضاً وقد عزز تواجدنا الرقمي بشكل كبير.",
+    "imageAlt": "إعادة تصميم موقع ووردبريس للعلامة التجارية للجمال يظهر التخطيط المتجاوب على أجهزة متعددة",
+    "resultsImageAlt": "لوحة تحليلات تظهر تحسينات في مقاييس مشاركة المستخدم بعد إعادة تصميم الموقع"
   },
   "localSeoCase": {
-    "title": "افزایش ۵۰۰٪ در قرارهای ملاقات از طریق استراتژی سئو محلی",
-    "category": "مطالعه موردی: سئو محلی",
-    "challenge": "یک کلینیک دندانپزشکی برای جذب بیماران محلی علیرغم ارائه خدمات عالی با مشکل مواجه بود. حضور آنلاین آنها حداقلی بود و در جستجوهای محلی توسط رقبا پشت سر گذاشته شده بودند.",
-    "solution": "ما یک استراتژی جامع سئو محلی شامل بهینه‌سازی پروفایل Google Business، ساخت منابع محلی، مدیریت نظرات و تولید محتوای مختص به موقعیت را اجرا کردیم.",
-    "results1": "افزایش ۵۰۰٪ در رزرو قرار ملاقات در طی ۴ ماه",
-    "results2": "رتبه‌بندی در بین ۳ نتیجه برتر برای تمام کلمات کلیدی محلی مهم",
-    "results3": "بهبود ۳۰۰٪ در ترافیک وبسایت از جستجوهای محلی",
-    "results4": "میانگین امتیاز ۴.۹/۵ با بیش از ۱۲۰ نظر از بیماران جدید",
-    "testimonial": "کمپین سئو محلی کسب و کار ما را متحول کرد. اکنون هفته‌ها از قبل رزرو شده‌ایم و مجبور شدیم برای رسیدگی به این رشد، کارکنان بیشتری استخدام کنیم. من قویاً خدمات سئو محلی وب اِی‌بی‌سی را توصیه می‌کنم.",
-    "imageAlt": "گوگل مپس که رتبه بالاتر کلینیک دندانپزشکی را پس از سئو محلی نشان می‌دهد",
-    "resultsImageAlt": "نموداری که رشد در دید جستجوی محلی و رزرو قرار ملاقات را پس از اجرای سئو نشان می‌دهد"
+    "title": "زيادة 500٪ في المواعيد من خلال استراتيجية تحسين محركات البحث المحلية",
+    "category": "دراسة حالة: تحسين محركات البحث المحلية",
+    "challenge": "كانت عيادة أسنان تكافح لجذب المرضى المحليين رغم تقديمها خدمات ممتازة. كان وجودها عبر الإنترنت ضئيلاً، وكانت متخلفة عن المنافسين في عمليات البحث المحلية.",
+    "solution": "نفذنا استراتيجية شاملة لتحسين محركات البحث المحلية بما في ذلك تحسين ملف Google Business، وبناء الاستشهادات المحلية، وإدارة المراجعات، وإنشاء محتوى خاص بالموقع.",
+    "results1": "زيادة بنسبة 500٪ في حجوزات المواعيد خلال 4 أشهر",
+    "results2": "تصنيفات ضمن أفضل 3 لجميع الكلمات الرئيسية المحلية الرئيسية",
+    "results3": "تحسن بنسبة 300٪ في حركة مرور الموقع من عمليات البحث المحلية",
+    "results4": "متوسط تقييم 4.9/5 مع أكثر من 120 مراجعة من المرضى الجدد",
+    "testimonial": "لقد حولت حملة تحسين محركات البحث المحلية أعمالنا. أصبحنا الآن محجوزين لعدة أسابيع مقدماً واضطررنا إلى توظيف موظفين إضافيين للتعامل مع النمو. أوصي بشدة بخدمات تحسين محركات البحث المحلية من ويب أ ب ج.",
+    "imageAlt": "خرائط جوجل تظهر التصنيف الأعلى لعيادة الأسنان بعد تحسين محركات البحث المحلية",
+    "resultsImageAlt": "مخطط يوضح النمو في الظهور في البحث المحلي وحجوزات المواعيد بعد تنفيذ تحسين محركات البحث"
   },
   "webDevCase": {
-    "title": "پلتفرم مالی مبتنی بر React با زمان فعالیت ۹۹.۹٪",
-    "category": "مطالعه موردی: توسعه اپلیکیشن وب",
-    "challenge": "یک استارتاپ فینتک نیاز به یک برنامه وب امن و مقیاس‌پذیر برای تجزیه و تحلیل داده‌های مالی و گزارش‌دهی داشت، با الزامات سختگیرانه برای عملکرد و قابلیت اطمینان.",
-    "solution": "ما یک برنامه وب سفارشی بر اساس React با بک‌اند Node.js توسعه دادیم که شامل تجسم داده‌های پیشرفته، پردازش داده‌های بلادرنگ و پروتکل‌های امنیتی در سطح بانک است.",
-    "results1": "زمان فعالیت ۹۹.۹٪ از زمان راه‌اندازی",
-    "results2": "پردازش داده ۹۰٪ سریع‌تر در مقایسه با راه‌حل قبلی",
-    "results3": "گذراندن موفق حسابرسی امنیتی خارجی بدون یافته‌های بحرانی",
-    "results4": "معماری مقیاس‌پذیر که از رشد ۱۰ برابری کاربر بدون افت عملکرد پشتیبانی می‌کند",
-    "testimonial": "وب اِی‌بی‌سی یک پلتفرم قدرتمند ارائه داد که برای رشد کسب و کار ما بسیار مهم بود. توجه آنها به جزئیات، به ویژه در مورد امنیت و بهینه‌سازی عملکرد، تخصص آنها در توسعه برنامه‌های مالی را نشان داد.",
-    "imageAlt": "رابط داشبورد پلتفرم مالی React که اجزای تجسم داده را نشان می‌دهد",
-    "resultsImageAlt": "معیارهای عملکرد که زمان فعالیت سیستم و بهینه‌سازی زمان پاسخ را پس از راه‌اندازی نشان می‌دهد"
+    "title": "منصة مالية قائمة على React مع وقت تشغيل 99.9٪",
+    "category": "دراسة حالة: تطوير تطبيقات الويب",
+    "challenge": "احتاجت شركة تقنية مالية ناشئة إلى تطبيق ويب آمن وقابل للتوسع لتحليل البيانات المالية وإعداد التقارير، مع متطلبات صارمة للأداء والموثوقية.",
+    "solution": "طورنا تطبيق ويب مخصص يعتمد على React مع خلفية Node.js، وتنفيذ تصور بيانات متقدم، ومعالجة بيانات في الوقت الحقيقي، وبروتوكولات أمان على مستوى البنوك.",
+    "results1": "وقت تشغيل 99.9٪ منذ الإطلاق",
+    "results2": "معالجة بيانات أسرع بنسبة 90٪ مقارنة بالحل السابق",
+    "results3": "اجتياز تدقيق أمني خارجي بنجاح بدون نتائج حرجة",
+    "results4": "بنية قابلة للتوسع تدعم نمو المستخدمين بمعدل 10 أضعاف دون تدهور الأداء",
+    "testimonial": "قدمت ويب أ ب ج منصة قوية كانت حاسمة لنمو أعمالنا. أظهر الاهتمام بالتفاصيل، خاصة حول الأمان وتحسين الأداء، خبرتهم في تطوير التطبيقات المالية.",
+    "imageAlt": "واجهة لوحة القيادة لمنصة React المالية تعرض مكونات تصور البيانات",
+    "resultsImageAlt": "مقاييس الأداء التي توضح وقت تشغيل النظام وتحسين وقت الاستجابة بعد النشر"
   }
 }
