--- a/i18n/fa/consultation.json
+++ b/i18n/fa/consultation.json
@@ -1,12 +1,12 @@
 {
-  "formSubmitted": "فرم با موفقیت ارسال شد",
-  "formSubmittedDesc": "ما در اسرع وقت با شما تماس خواهیم گرفت.",
-  "title": "درخواست مشاوره",
-  "description": "فرم زیر را پر کنید تا درخواست مشاوره دهید.",
-  "fullName": "نام کامل",
-  "phone": "شماره تلفن",
-  "email": "آدرس ایمیل",
-  "message": "پیام",
-  "cancel": "لغو",
-  "sendRequest": "ارسال درخواست"
+  "formSubmitted": "تم إرسال النموذج بنجاح",
+  "formSubmittedDesc": "سنتواصل معك في أقرب وقت ممكن.",
+  "title": "طلب استشارة",
+  "description": "املأ النموذج أدناه لطلب استشارة.",
+  "fullName": "الاسم الكامل",
+  "phone": "رقم الهاتف",
+  "email": "البريد الإلكتروني",
+  "message": "الرسالة",
+  "cancel": "إلغاء",
+  "sendRequest": "إرسال الطلب"
 }
