--- a/i18n/fa/home.json
+++ b/i18n/fa/home.json
@@ -1,33 +1,33 @@
 
 {
-  "heroTitle": "وب اِی‌بی‌سی | خدمات حرفه‌ای سئو و طراحی وب",
-  "heroDescription": "ارائه‌دهنده خدمات تخصصی سئو و بهینه‌سازی موتور جستجو، طراحی وب و توسعه اپلیکیشن وب با آخرین فناوری‌ها",
-  "heroKeywords": "طراحی وب‌سایت، سئو، بهینه‌سازی سایت، طراحی وب، دیجیتال مارکتینگ، وردپرس",
+  "heroTitle": "ويب إيه بي سي | خدمات احترافية لتحسين محركات البحث وتصميم الويب",
+  "heroDescription": "مزود خدمات متخصصة في تحسين محركات البحث وتقنيات السيو، تصميم الويب وتطوير تطبيقات الويب بأحدث التقنيات",
+  "heroKeywords": "تصميم مواقع، سيو، تحسين المواقع، تصميم ويب، تسويق رقمي، ووردبريس",
   "hero": {
-    "title": "حضور دیجیتال خود را با راهکارهای تخصصی وب ارتقا دهید",
-    "description": "ما به کسب‌وکارها کمک می‌کنیم با توسعه وب حرفه‌ای و استراتژی‌های سئو که نتایج واقعی ارائه می‌دهند، به‌صورت آنلاین رشد کنند.",
-    "primaryCta": "مشاهده خدمات",
-    "secondaryCta": "مشاهده نمونه کارها",
-    "imageAlt": "تصویر دیجیتال مارکتینگ و توسعه وب"
+    "title": "ارفع حضورك الرقمي مع حلول ويب خبيرة",
+    "description": "نساعد الشركات على النمو عبر الإنترنت من خلال تطوير الويب الاحترافي واستراتيجيات تحسين محركات البحث التي تقدم نتائج حقيقية.",
+    "primaryCta": "استكشف الخدمات",
+    "secondaryCta": "عرض معرض الأعمال",
+    "imageAlt": "رسم توضيحي للتسويق الرقمي وتطوير الويب"
   },
   "footer": {
-    "companySince": "© 2024 وب اِی‌بی‌سی. تمامی حقوق محفوظ است.",
-    "aboutCompany": "وب اِی‌بی‌سی، متخصص در خدمات سئو و توسعه وب با بیش از ۱۰ سال تجربه در صنعت دیجیتال مارکتینگ.",
-    "services": "خدمات",
-    "company": "شرکت",
-    "resources": "منابع",
-    "privacyPolicy": "سیاست حفظ حریم خصوصی",
-    "termsOfService": "شرایط استفاده از خدمات",
-    "cookiePolicy": "سیاست کوکی",
-    "address": "آدرس",
-    "phone": "تلفن",
-    "email": "ایمیل",
-    "followUs": "ما را دنبال کنید",
-    "newsletter": "خبرنامه",
-    "subscribePrompt": "برای دریافت آخرین اخبار ما مشترک شوید",
-    "subscribeButton": "اشتراک",
-    "yourEmail": "آدرس ایمیل شما",
-    "contactInfo": "اطلاعات تماس",
-    "quickLinks": "دسترسی سریع"
+    "companySince": "© 2024 ويب إيه بي سي. جميع الحقوق محفوظة.",
+    "aboutCompany": "ويب إيه بي سي، متخصصة في خدمات تحسين محركات البحث وتطوير الويب مع أكثر من 10 سنوات من الخبرة في صناعة التسويق الرقمي.",
+    "services": "الخدمات",
+    "company": "الشركة",
+    "resources": "الموارد",
+    "privacyPolicy": "سياسة الخصوصية",
+    "termsOfService": "شروط الخدمة",
+    "cookiePolicy": "سياسة ملفات تعريف الارتباط",
+    "address": "العنوان",
+    "phone": "الهاتف",
+    "email": "البريد الإلكتروني",
+    "followUs": "تابعنا",
+    "newsletter": "النشرة الإخبارية",
+    "subscribePrompt": "اشترك لتلقي أحدث أخبارنا",
+    "subscribeButton": "اشتراك",
+    "yourEmail": "عنوان بريدك الإلكتروني",
+    "contactInfo": "معلومات الاتصال",
+    "quickLinks": "روابط سريعة"
   }
 }
