--- a/i18n/fa/notFound.json
+++ b/i18n/fa/notFound.json
@@ -1,7 +1,7 @@
 {
-  "title": "صفحه یافت نشد",
-  "subtitle": "متاسفیم، صفحه ای که دنبالش هستید وجود ندارد.",
+  "title": "صفحة غير موجودة",
+  "subtitle": "عذرًا، الصفحة التي تبحث عنها غير موجودة.",
   "errorNumber": "404",
-  "backHome": "بازگشت به خانه",
-  "backPrevious": "بازگشت به صفحه قبلی"
+  "backHome": "العودة إلى الصفحة الرئيسية",
+  "backPrevious": "العودة إلى الصفحة السابقة"
 }
