--- a/i18n/fa/portfolio.json
+++ b/i18n/fa/portfolio.json
@@ -1,81 +1,81 @@
 
 {
-  "title": "نمونه کارهای ما",
-  "description": "پروژه‌های موفق ما در صنایع مختلف را بررسی کنید",
-  "allProjects": "همه پروژه‌ها",
-  "webDesign": "طراحی وب",
-  "ecommerce": "فروشگاه آنلاین",
-  "seoProjects": "پروژه‌های سئو",
-  "mobileApps": "اپلیکیشن‌های موبایل",
-  "client": "مشتری",
-  "duration": "مدت زمان",
-  "technologies": "فناوری‌ها",
-  "category": "دسته‌بندی",
-  "challenge": "چالش",
-  "solution": "راه‌حل",
-  "results": "نتایج",
-  "testimonial": "نظر مشتری",
-  "relatedProjects": "پروژه‌های مرتبط",
+  "title": "معرض أعمالنا",
+  "description": "استكشف مشاريعنا الناجحة عبر مختلف الصناعات",
+  "allProjects": "جميع المشاريع",
+  "webDesign": "تصميم الويب",
+  "ecommerce": "التجارة الإلكترونية",
+  "seoProjects": "مشاريع تحسين محركات البحث",
+  "mobileApps": "تطبيقات الجوال",
+  "client": "العميل",
+  "duration": "المدة",
+  "technologies": "التقنيات",
+  "category": "الفئة",
+  "challenge": "التحدي",
+  "solution": "الحل",
+  "results": "النتائج",
+  "testimonial": "شهادة العميل",
+  "relatedProjects": "مشاريع ذات صلة",
   "caseStudies": {
-    "title": "مطالعات موردی",
-    "subtitle": "داستان‌های موفقیت و مطالعات موردی",
-    "description": "مطالعات موردی ما را بررسی کنید تا مسیر از چالش‌های اولیه تا نتایج قابل اندازه‌گیری را مشاهده کنید. هر مطالعه موردی نشان‌دهنده تعهد ما به ارائه ارزش است.",
-    "challenge": "چالش",
-    "solution": "راه‌حل",
-    "results": "نتایج",
-    "downloadHint": "می‌خواهید درباره روش‌ها و نتایج ما بیشتر بدانید؟",
-    "downloadFull": "دانلود مطالعات موردی کامل",
-    "contactForMore": "برای اطلاعات بیشتر با ما تماس بگیرید",
+    "title": "دراسات الحالة",
+    "subtitle": "قصص النجاح ودراسات الحالة",
+    "description": "استكشف دراسات الحالة لدينا لرؤية الرحلة من التحديات الأولية إلى النتائج القابلة للقياس. تظهر كل دراسة حالة التزامنا بتقديم القيمة.",
+    "challenge": "التحدي",
+    "solution": "الحل",
+    "results": "النتائج",
+    "downloadHint": "هل تريد معرفة المزيد عن نهجنا ونتائجنا؟",
+    "downloadFull": "تنزيل دراسات الحالة الكاملة",
+    "contactForMore": "اتصل بنا لمزيد من المعلومات",
     "ecommerceCase": {
-      "title": "افزایش ۲۰۰٪ فروش آنلاین با بهینه‌سازی سئو",
-      "category": "مطالعه موردی: فروشگاه آنلاین",
-      "challenge": "یک فروشگاه آنلاین لوازم خانگی محصولات باکیفیتی داشت اما ترافیک و فروش کمی داشت. مشکل اصلی عدم بهینه‌سازی مناسب موتور جستجو و تجربه کاربری ضعیف بود.",
-      "solution": "تیم ما یک استراتژی جامع شامل بهینه‌سازی فنی سایت، بهبود ساختار محتوا، اصلاح معماری اطلاعات و ایجاد صفحات فرود اختصاصی برای محصولات پرطرفدار طراحی کرد.",
-      "results1": "۲۰۰٪ افزایش در فروش آنلاین طی ۶ ماه",
-      "results2": "۱۵۰٪ بهبود در ترافیک ارگانیک از گوگل",
-      "results3": "۳۰٪ افزایش در نرخ تبدیل",
-      "results4": "۲۵٪ کاهش در نرخ پرش",
-      "testimonial": "همکاری با وب اِی‌بی‌سی یکی از بهترین تصمیمات تجاری ما بود. نتایج بهینه‌سازی سایت ما بسیار فراتر از انتظارات ما بود.",
-      "imageAlt": "نمودار رشد فروش فروشگاه آنلاین پس از بهینه‌سازی سئو توسط وب اِی‌بی‌سی",
-      "resultsImageAlt": "نتایج بهبود رتبه‌بندی کلمات کلیدی برای فروشگاه آنلاین پس از اجرای سئو توسط وب اِی‌بی‌سی"
+      "title": "زيادة 200% في المبيعات عبر الإنترنت مع تحسين محركات البحث",
+      "category": "دراسة حالة: متجر عبر الإنترنت",
+      "challenge": "كان لدى متجر أجهزة منزلية عبر الإنترنت منتجات عالية الجودة ولكن حركة مرور ومبيعات منخفضة. كانت المشكلة الرئيسية هي عدم وجود تحسين مناسب لمحركات البحث وتجربة مستخدم سيئة.",
+      "solution": "صمم فريقنا استراتيجية شاملة تتضمن التحسين التقني للموقع، وتحسين هيكل المحتوى، وتصحيح بنية المعلومات، وإنشاء صفحات هبوط مخصصة للمنتجات الشائعة.",
+      "results1": "زيادة بنسبة 200% في المبيعات عبر الإنترنت خلال 6 أشهر",
+      "results2": "تحسن بنسبة 150% في حركة المرور العضوية من جوجل",
+      "results3": "زيادة بنسبة 30% في معدل التحويل",
+      "results4": "انخفاض بنسبة 25% في معدل الارتداد",
+      "testimonial": "كانت الشراكة مع ويب إيه بي سي أحد أفضل قراراتنا التجارية. تجاوزت نتائج تحسين موقعنا توقعاتنا بكثير.",
+      "imageAlt": "مخطط نمو مبيعات المتجر عبر الإنترنت بعد تحسين محركات البحث بواسطة ويب إيه بي سي",
+      "resultsImageAlt": "نتائج تحسين ترتيب الكلمات الرئيسية للمتجر عبر الإنترنت بعد تنفيذ تحسين محركات البحث بواسطة ويب إيه بي سي"
     },
     "wordpressCase": {
-      "title": "راه‌اندازی مجدد برند با وب‌سایت وردپرس سفارشی",
-      "category": "مطالعه موردی: توسعه وردپرس",
-      "challenge": "یک برند زیبایی نیاز به تحول دیجیتال کامل وب‌سایت قدیمی خود داشت که به‌روزرسانی آن دشوار بود و منجر به تولید سرنخ یا فروش نمی‌شد.",
-      "solution": "ما یک وب‌سایت وردپرس سفارشی با قالبی ویژه توسعه دادیم، قابلیت فروشگاه آنلاین را ادغام کردیم و استراتژی محتوایی متمرکز بر آموزش محصول و مشاوره زیبایی پیاده‌سازی کردیم.",
-      "results1": "۷۵٪ افزایش در میانگین زمان حضور در سایت",
-      "results2": "۱۸۰٪ رشد در اشتراک خبرنامه",
-      "results3": "۹۵٪ افزایش در تعداد درخواست‌های آنلاین محصول",
-      "testimonial": "تیم وب اِی‌بی‌سی وب‌سایتی ارائه داد که به طور کامل نشان‌دهنده هویت برند ما است. سایت نه تنها زیباست بلکه کاربرپسند است و حضور دیجیتال ما را به طور قابل توجهی افزایش داده است.",
-      "imageAlt": "طراحی مجدد وب‌سایت وردپرس برای برند زیبایی با نمایش طرح واکنش‌گرا روی دستگاه‌های مختلف",
-      "resultsImageAlt": "داشبورد تحلیلی نشان‌دهنده بهبود شاخص‌های تعامل کاربر پس از طراحی مجدد وب‌سایت"
+      "title": "إعادة إطلاق العلامة التجارية مع موقع ووردبريس مخصص",
+      "category": "دراسة حالة: تطوير ووردبريس",
+      "challenge": "كانت علامة تجارية للجمال بحاجة إلى تحول رقمي كامل لموقعها القديم الذي كان من الصعب تحديثه ولم يكن يولد عملاء محتملين أو مبيعات.",
+      "solution": "قمنا بتطوير موقع ووردبريس مخصص بقالب متميز، ودمج وظائف التجارة الإلكترونية، وتنفيذ استراتيجية محتوى تركز على تعليم المنتج ونصائح الجمال.",
+      "results1": "زيادة بنسبة 75% في متوسط الوقت على الموقع",
+      "results2": "نمو بنسبة 180% في اشتراكات النشرة الإخبارية",
+      "results3": "زيادة بنسبة 95% في استفسارات المنتج عبر الإنترنت",
+      "testimonial": "قدم فريق ويب إيه بي سي موقعًا يمثل هوية علامتنا التجارية بشكل مثالي. الموقع ليس جميلاً فحسب، بل سهل الاستخدام أيضًا وقد عزز وجودنا الرقمي بشكل كبير.",
+      "imageAlt": "إعادة تصميم موقع ووردبريس لعلامة تجارية للجمال يعرض تخطيطًا متجاوبًا على أجهزة متعددة",
+      "resultsImageAlt": "لوحة تحليلات تظهر تحسينات في مقاييس مشاركة المستخدم بعد إعادة تصميم الموقع"
     },
     "localSeoCase": {
-      "title": "۵۰۰٪ افزایش نوبت‌دهی از طریق استراتژی سئو محلی",
-      "category": "مطالعه موردی: سئو محلی",
-      "challenge": "یک کلینیک دندانپزشکی علی‌رغم ارائه خدمات عالی، در جذب بیماران محلی مشکل داشت. حضور آنلاین آن‌ها حداقلی بود و رتبه‌شان در جستجوهای محلی پایین‌تر از رقبا بود.",
-      "solution": "ما یک استراتژی جامع سئو محلی شامل بهینه‌سازی پروفایل گوگل بیزینس، ایجاد لیستینگ‌های محلی، مدیریت نظرات و ایجاد محتوای مخصوص منطقه پیاده‌سازی کردیم.",
-      "results1": "۵۰۰٪ افزایش در نوبت‌گیری طی ۴ ماه",
-      "results2": "رتبه‌بندی در بین ۳ نتیجه برتر برای تمام کلمات کلیدی محلی اصلی",
-      "results3": "۳۰۰٪ بهبود در ترافیک وب‌سایت از جستجوهای محلی",
-      "results4": "میانگین امتیاز ۴.۹ از ۵ با بیش از ۱۲۰ نظر بیمار جدید",
-      "testimonial": "کمپین سئو محلی کسب‌وکار ما را متحول کرد. اکنون نوبت‌های ما هفته‌ها از قبل پر می‌شود و مجبور شده‌ایم برای مدیریت این رشد، کارکنان بیشتری استخدام کنیم. خدمات سئو محلی وب اِی‌بی‌سی را به شدت توصیه می‌کنم.",
-      "imageAlt": "گوگل مپس با نمایش رتبه برتر برای کلینیک دندانپزشکی پس از بهینه‌سازی سئو محلی",
-      "resultsImageAlt": "نمودار نشان‌دهنده رشد در دید جستجوی محلی و نوبت‌دهی پس از پیاده‌سازی سئو"
+      "title": "500% المزيد من المواعيد من خلال استراتيجية تحسين محركات البحث المحلية",
+      "category": "دراسة حالة: تحسين محركات البحث المحلية",
+      "challenge": "كانت عيادة أسنان تكافح لجذب المرضى المحليين رغم تقديمها خدمات ممتازة. كان وجودها عبر الإنترنت ضئيلًا، وكان ترتيبها أدنى من المنافسين في عمليات البحث المحلية.",
+      "solution": "قمنا بتنفيذ استراتيجية شاملة لتحسين محركات البحث المحلية تشمل تحسين ملف جوجل للأعمال، وبناء استشهادات محلية، وإدارة المراجعات، وإنشاء محتوى خاص بالموقع.",
+      "results1": "زيادة بنسبة 500% في حجز المواعيد خلال 4 أشهر",
+      "results2": "ترتيبات ضمن أفضل 3 نتائج لجميع الكلمات الرئيسية المحلية الرئيسية",
+      "results3": "تحسين بنسبة 300% في حركة مرور الموقع من عمليات البحث المحلية",
+      "results4": "متوسط تقييم 4.9/5 مع أكثر من 120 مراجعة من مرضى جدد",
+      "testimonial": "لقد حولت حملة تحسين محركات البحث المحلية أعمالنا. نحن الآن محجوزون قبل أسابيع واضطررنا إلى توظيف موظفين إضافيين للتعامل مع النمو. أوصي بشدة بخدمات تحسين محركات البحث المحلية من ويب إيه بي سي.",
+      "imageAlt": "خرائط جوجل تظهر ترتيبًا متقدمًا لعيادة أسنان بعد تحسين محركات البحث المحلية",
+      "resultsImageAlt": "مخطط يوضح نمو الرؤية في البحث المحلي وحجوزات المواعيد بعد تنفيذ تحسين محركات البحث"
     },
     "webDevCase": {
-      "title": "پلتفرم مالی مبتنی بر React با آپتایم ۹۹.۹٪",
-      "category": "مطالعه موردی: توسعه اپلیکیشن وب",
-      "challenge": "یک استارتاپ فین‌تک به یک برنامه وب امن و مقیاس‌پذیر برای تحلیل و گزارش‌دهی داده‌های مالی، با الزامات سخت‌گیرانه برای عملکرد و قابلیت اطمینان نیاز داشت.",
-      "solution": "ما یک اپلیکیشن وب سفارشی مبتنی بر React با بک‌اند Node.js توسعه دادیم که شامل تجسم داده پیشرفته، پردازش داده در زمان واقعی و پروتکل‌های امنیتی سطح بانکی بود.",
-      "results1": "۹۹.۹٪ آپتایم از زمان راه‌اندازی",
-      "results2": "پردازش داده ۹۰٪ سریع‌تر در مقایسه با راه‌حل قبلی",
-      "results3": "عبور موفق از حسابرسی امنیتی خارجی بدون یافته‌های بحرانی",
-      "results4": "معماری مقیاس‌پذیر با پشتیبانی از رشد ۱۰ برابری کاربران بدون افت عملکرد",
-      "testimonial": "وب اِی‌بی‌سی یک پلتفرم قدرتمند ارائه داد که برای رشد کسب‌وکار ما بسیار مهم بوده است. توجه به جزئیات، به ویژه در زمینه امنیت و بهینه‌سازی عملکرد، تخصص آن‌ها در توسعه اپلیکیشن‌های مالی را نشان داد.",
-      "imageAlt": "رابط داشبورد پلتفرم مالی React با نمایش اجزای تجسم داده",
-      "resultsImageAlt": "معیارهای عملکرد نشان‌دهنده آپتایم سیستم و بهبود زمان پاسخ پس از استقرار"
+      "title": "منصة مالية قائمة على React بنسبة تشغيل 99.9%",
+      "category": "دراسة حالة: تطوير تطبيق ويب",
+      "challenge": "كانت شركة ناشئة في مجال التكنولوجيا المالية بحاجة إلى تطبيق ويب آمن وقابل للتوسع لتحليل البيانات المالية وإعداد التقارير، مع متطلبات صارمة للأداء والموثوقية.",
+      "solution": "قمنا بتطوير تطبيق ويب مخصص قائم على React مع خلفية Node.js، وتنفيذ تصور متقدم للبيانات، ومعالجة البيانات في الوقت الفعلي، وبروتوكولات أمان على مستوى البنوك.",
+      "results1": "نسبة تشغيل 99.9% منذ الإطلاق",
+      "results2": "معالجة بيانات أسرع بنسبة 90% مقارنة بالحل السابق",
+      "results3": "اجتياز تدقيق أمني خارجي بنجاح بدون نتائج حرجة",
+      "results4": "بنية قابلة للتوسع تدعم نمو المستخدمين بمقدار 10 أضعاف دون تدهور الأداء",
+      "testimonial": "قدمت ويب إيه بي سي منصة قوية كانت حاسمة لنمو أعمالنا. أظهر الاهتمام بالتفاصيل، خاصة حول تحسين الأمان والأداء، خبرتهم في تطوير التطبيقات المالية.",
+      "imageAlt": "واجهة لوحة التحكم للمنصة المالية React تعرض مكونات تصور البيانات",
+      "resultsImageAlt": "مقاييس الأداء التي تظهر وقت التشغيل للنظام وتحسين وقت الاستجابة بعد النشر"
     }
   }
 }
