--- a/i18n/fa/services.json
+++ b/i18n/fa/services.json
@@ -1,111 +1,111 @@
-
 {
-  "sectionTag": "خدمات ما",
+  "sectionTag": "خدماتنا",
   "sectionTitle": {
-    "prefix": "راهکارهای ",
-    "highlight": "دیجیتال مارکتینگ",
-    "suffix": " برای کسب و کار شما"
+  "prefix": "حلول ",
+  "highlight": "التسويق الرقمي",
+  "suffix": " لأعمالك"
   },
-  "sectionDescription": "ما خدمات جامع سئو و توسعه وب را برای کمک به موفقیت آنلاین کسب و کار شما ارائه می‌دهیم. تمام خدمات ما طبق آخرین استانداردهای جهانی طراحی شده و برای نیازهای خاص بازار سفارشی‌سازی شده‌اند.",
-  "title": "خدمات حرفه‌ای سئو و توسعه وب",
-  "description": "راهکارهای جامع دیجیتال مارکتینگ برای رشد کسب و کار شما. با استفاده از آخرین فناوری‌ها و تکنیک‌های پیشرفته، وب‌سایت شما را به ابزاری قدرتمند برای جذب مشتری تبدیل می‌کنیم.",
+  "sectionDescription": "نقدم خدمات شاملة في تحسين محركات البحث وتطوير الويب لمساعدة عملك على النجاح عبر الإنترنت. جميع خدماتنا مصممة وفقًا لأحدث المعايير العالمية ومخصصة للاحتياجات المحددة للسوق.",
+  "title": "خدمات احترافية في تحسين محركات البحث وتطوير الويب",
+  "description": "حلول تسويق رقمي شاملة لنمو أعمالك. باستخدام أحدث التقنيات والأساليب المتقدمة، نحول موقعك إلى أداة قوية لجذب العملاء.",
   "seo": {
-    "title": "سئو و بهینه‌سازی تخصصی",
-    "description": "رتبه وبسایت خود را در موتورهای جستجو با استفاده از تکنیک‌های استاندارد سئو بهبود دهید.",
-    "features": [
-      "تحقیق کلمات کلیدی",
-      "بهینه‌سازی محتوا",
-      "سئو تکنیکال",
-      "لینک‌سازی خارجی",
-      "گزارش‌دهی ماهانه"
-    ]
+  "title": "تحسين محركات البحث والتحسين المتخصص",
+  "description": "تحسين ترتيب موقعك في محركات البحث باستخدام تقنيات تحسين محركات البحث القياسية.",
+  "features": [
+  "بحث الكلمات المفتاحية",
+  "تحسين المحتوى",
+  "تحسين محركات البحث التقني",
+  "بناء الروابط الخارجية",
+  "تقارير شهرية"
+  ]
   },
   "webDesign": {
-    "title": "طراحی سفارشی وبسایت",
-    "description": "طراحی و توسعه وبسایت با رابط کاربری جذاب، کدنویسی تمیز و سازگاری با موبایل.",
-    "features": [
-      "طراحی واکنش‌گرا",
-      "رابط کاربری مدرن",
-      "سرعت بارگذاری بالا",
-      "سازگار با سئو",
-      "امنیت بالا"
-    ]
+  "title": "تصميم مواقع مخصصة",
+  "description": "تصميم وتطوير مواقع الويب بواجهة مستخدم جذابة، وكود نظيف وتوافق مع الهاتف المحمول.",
+  "features": [
+  "تصميم متجاوب",
+  "واجهة مستخدم حديثة",
+  "سرعة تحميل عالية",
+  "صديق لمحركات البحث",
+  "أمان عالٍ"
+  ]
   },
   "contentCreation": {
-    "title": "تولید محتوای تخصصی",
-    "description": "تولید محتوای با کیفیت بالا، بهینه‌سازی شده برای کلمات کلیدی مرتبط با کسب و کار شما.",
-    "features": [
-      "محتوای تخصصی",
-      "بهینه‌سازی شده برای سئو",
-      "استراتژی محتوا",
-      "تقویم انتشار",
-      "گرافیک سفارشی"
-    ]
+  "title": "إنشاء محتوى متخصص",
+  "description": "إنتاج محتوى عالي الجودة، محسّن للكلمات المفتاحية ذات الصلة بعملك.",
+  "features": [
+  "محتوى متخصص",
+  "محسن لمحركات البحث",
+  "استراتيجية المحتوى",
+  "تقويم النشر",
+  "رسومات مخصصة"
+  ]
   },
-  "consultButton": "مشاوره درباره",
-  "imagePrefix": "تصویر",
+  "consultButton": "استشارة حول",
+  "imagePrefix": "صورة",
   "keyFeatures": [
-    {
-      "title": "تحقیق کلمات کلیدی",
-      "desc": "شناسایی بهترین کلمات کلیدی برای کسب و کار شما"
-    },
-    {
-      "title": "بهینه‌سازی محتوا",
-      "desc": "محتوای با کیفیت بهینه‌سازی شده برای موتورهای جستجو"
-    },
-    {
-      "title": "لینک‌سازی خارجی",
-      "desc": "استراتژی حرفه‌ای لینک‌سازی برای افزایش اعتبار سایت"
-    }
-  ],
-  "webDevelopment": "توسعه وب",
-  "webDevelopmentTitle": "خدمات طراحی و توسعه وب سایت",
-  "webDevelopmentDescription": "تیم متخصص ما وب سایت‌های مدرن، کاربرپسند و بهینه‌سازی شده برای موتورهای جستجو طراحی می‌کند. از وب‌سایت‌های ساده شرکتی تا فروشگاه‌های آنلاین پیچیده و برنامه‌های وب تعاملی، ما راه‌حل‌هایی متناسب با نیازهای شما ارائه می‌دهیم.",
-  "wordpressDesc": "طراحی و توسعه حرفه‌ای وب‌سایت‌های وردپرس، سفارشی شده برای نیازهای کسب و کار شما",
-  "frontendDev": "توسعه رابط کاربری با استفاده از React و Next.js",
-  "frontendDesc": "ایجاد رابط‌های کاربری مدرن، سریع و واکنش‌گرا با استفاده از تکنولوژی‌های پیشرفته فرانت‌اند",
-  "backendDev": "توسعه بک‌اند با استفاده از Python و Node.js",
-  "backendDesc": "ایجاد زیرساخت قدرتمند، مقیاس‌پذیر و امن برای برنامه‌های وب",
-  "feature": {
-    "uiuxDesign": "طراحی و توسعه UI/UX مدرن",
-    "reactNextjs": "پیاده‌سازی با React.js و Next.js",
-    "responsiveDesign": "طراحی واکنش‌گرا برای تمام دستگاه‌ها",
-    "webVitals": "بهینه‌سازی Core Web Vitals",
-    "animations": "انیمیشن‌ها و تعاملات پیشرفته کاربر",
-    "apiIntegration": "ادغام با APIهای مختلف",
-    "restApi": "طراحی و پیاده‌سازی RESTful APIs",
-    "python": "توسعه با Django یا Flask (Python)",
-    "nodejs": "توسعه با Express یا NestJS (Node.js)",
-    "database": "مدیریت پایگاه داده‌ها (SQL و NoSQL)",
-    "auth": "پیاده‌سازی سیستم‌های احراز هویت و مجوز",
-    "cloudIntegration": "ادغام با سرویس‌های ابری"
+  {
+  "title": "بحث الكلمات المفتاحية",
+  "desc": "تحديد أفضل الكلمات المفتاحية لعملك"
   },
-  "seoTitle": "خدمات سئو",
-  "seoDescription": "بهبود رتبه وب‌سایت شما",
-  "localSeoTitle": "سئو محلی",
-  "localSeoDescription": "برتری در جستجوهای محلی",
-  "webDesignTitle": "خدمات طراحی سایت",
-  "webDevTitle": "توسعه وب",
-  "webDevDescription": "راهکارهای سفارشی وب",
-  "faqTitle": "پاسخ به سوالات متداول شما",
-  "faqDescription": "در اینجا به برخی از سؤالات رایج در مورد خدمات سئو و توسعه وب ما پاسخ داده‌ایم. اگر سؤالات بیشتری دارید، لطفاً با ما تماس بگیرید.",
-  "ctaTitle": "آماده تحول کسب‌وکارتان هستید؟",
-  "ctaDescription": "با ما تماس بگیرید تا نیازهای خاص پروژه شما را بررسی کنیم و راه‌حلی متناسب با اهداف کسب‌وکارتان ارائه دهیم.",
-  "ourServices": "خدمات ما",
-  "technicalOptimization": "بهینه‌سازی فنی",
-  "linkBuilding": "لینک‌سازی",
-  "faq": {
-    "costQuestion": "هزینه خدمات سئو شما چقدر است؟",
-    "costAnswer": "هزینه خدمات سئوی ما بسته به نیازهای خاص کسب‌وکار شما، اندازه وب‌سایت، سطح رقابت در صنعت شما و اهداف شما متغیر است. ما برای هر مشتری یک طرح سفارشی با قیمت‌گذاری شفاف ارائه می‌دهیم. برای مشاوره رایگان و برآورد هزینه با ما تماس بگیرید.",
-    "timelineQuestion": "چه مدت طول می‌کشد تا نتایج سئو را ببینیم؟",
-    "timelineAnswer": "سئو یک فرآیند مستمر و بلندمدت است. معمولاً می‌توانید برخی تغییرات اولیه را در 3-4 ماه اول مشاهده کنید، اما نتایج قابل توجه و پایدار معمولاً بین 6 تا 12 ماه طول می‌کشد. این جدول زمانی به عوامل مختلفی مانند رقابت، عمر دامنه، کیفیت محتوا و ساختار فنی سایت بستگی دارد.",
-    "wordpressQuestion": "آیا شما فقط از وردپرس برای توسعه وب‌سایت استفاده می‌کنید؟",
-    "wordpressAnswer": "نه، ما از مجموعه گسترده‌ای از فناوری‌هایی متناسب با نیازهای پروژه شما استفاده می‌کنیم. علاوه بر وردپرس، تیم ما در توسعه با استفاده از React، Next.js، Node.js، Python (Django/Flask) و سایر فریم‌ورک‌های مدرن تخصص دارد. ما بر اساس نیازهای خاص پروژه شما، فناوری مناسب را توصیه می‌کنیم.",
-    "blackhatQuestion": "آیا شما از تکنیک‌های سئو کلاه سیاه استفاده می‌کنید؟",
-    "blackhatAnswer": "قطعاً خیر. ما فقط از تکنیک‌های سئو کلاه سفید و روش‌های اخلاقی مطابق با دستورالعمل‌های گوگل استفاده می‌کنیم. استراتژی‌های ما بر توسعه محتوای با کیفیت بالا، تجربه کاربری عالی و بهینه‌سازی فنی متمرکز است. استفاده از روش‌های غیراخلاقی ممکن است نتایج کوتاه‌مدت داشته باشد اما در نهایت منجر به جریمه و آسیب به کسب‌وکار شما می‌شود.",
-    "multilingualQuestion": "آیا خدمات برای وب‌سایت‌های چندزبانه ارائه می‌دهید؟",
-    "multilingualAnswer": "بله، ما در طراحی و بهینه‌سازی سایت‌های چندزبانه تخصص داریم. تیم ما می‌تواند راه‌حل‌های فنی مناسب برای پیاده‌سازی سایت‌های چندزبانه، از جمله ساختار URL مناسب، برچسب‌های hreflang و ترجمه محتوا ارائه دهد. ما تجربه خاصی در بهینه‌سازی سایت‌های انگلیسی-فارسی داریم.",
-    "supportQuestion": "آیا پس از تحویل پروژه خدمات پشتیبانی ارائه می‌دهید؟",
-    "supportAnswer": "بله، ما بسته‌های پشتیبانی متنوعی ارائه می‌دهیم تا اطمینان حاصل شود که سایت شما همیشه به‌روز، امن و بهینه است. این خدمات شامل به‌روزرسانی‌های امنیتی، پشتیبان‌گیری منظم، بهینه‌سازی عملکرد، به‌روزرسانی محتوا، و عیب‌یابی و رفع مشکلات فنی است. همچنین به تیم شما برای مدیریت سایت آموزش می‌دهیم."
+  {
+  "title": "تحسين المحتوى",
+  "desc": "محتوى عالي الجودة محسن لمحركات البحث"
+  },
+  {
+  "title": "بناء الروابط الخارجية",
+  "desc": "استراتيجية احترافية لبناء الروابط لزيادة سلطة الموقع"
   }
-}
+  ],
+  "webDevelopment": "تطوير الويب",
+  "webDevelopmentTitle": "خدمات تصميم وتطوير المواقع الإلكترونية",
+  "webDevelopmentDescription": "يصمم فريقنا المتخصص مواقع إلكترونية حديثة، سهلة الاستخدام، ومحسّنة لمحركات البحث. من المواقع المؤسسية البسيطة إلى المتاجر الإلكترونية المعقدة وتطبيقات الويب التفاعلية، نقدم حلولاً تناسب احتياجاتك.",
+  "wordpressDesc": "تصميم وتطوير احترافي لمواقع ووردبريس، مخصصة لاحتياجات عملك",
+  "frontendDev": "تطوير واجهة المستخدم باستخدام React و Next.js",
+  "frontendDesc": "إنشاء واجهات مستخدم حديثة، سريعة، ومتجاوبة باستخدام تقنيات واجهة المستخدم المتقدمة",
+  "backendDev": "تطوير الخلفية باستخدام Python و Node.js",
+  "backendDesc": "إنشاء بنية تحتية قوية، قابلة للتوسع، وآمنة لتطبيقات الويب",
+  "feature": {
+  "uiuxDesign": "تصميم وتطوير UI/UX حديث",
+  "reactNextjs": "التنفيذ باستخدام React.js و Next.js",
+  "responsiveDesign": "تصميم متجاوب لجميع الأجهزة",
+  "webVitals": "تحسين Core Web Vitals",
+  "animations": "رسوم متحركة وتفاعلات مستخدم متقدمة",
+  "apiIntegration": "التكامل مع واجهات برمجة التطبيقات المختلفة",
+  "restApi": "تصميم وتنفيذ واجهات برمجة RESTful",
+  "python": "التطوير باستخدام Django أو Flask (Python)",
+  "nodejs": "التطوير باستخدام Express أو NestJS (Node.js)",
+  "database": "إدارة قواعد البيانات (SQL و NoSQL)",
+  "auth": "تنفيذ أنظمة المصادقة والتفويض",
+  "cloudIntegration": "التكامل مع الخدمات السحابية"
+  },
+  "seoTitle": "خدمات تحسين محركات البحث",
+  "seoDescription": "تحسين ترتيب موقعك الإلكتروني",
+  "localSeoTitle": "تحسين محركات البحث المحلية",
+  "localSeoDescription": "التفوق في عمليات البحث المحلية",
+  "webDesignTitle": "خدمات تصميم المواقع",
+  "webDevTitle": "تطوير الويب",
+  "webDevDescription": "حلول ويب مخصصة",
+  "faqTitle": "إجابات على أسئلتك الشائعة",
+  "faqDescription": "هنا أجبنا على بعض الأسئلة الشائعة حول خدمات تحسين محركات البحث وتطوير الويب لدينا. إذا كان لديك أسئلة أخرى، يرجى الاتصال بنا.",
+  "faq": {
+  "costQuestion": "كم تكلفة خدمات تحسين محركات البحث الخاصة بكم؟",
+  "costAnswer": "تعتمد تكلفة خدمات تحسين محركات البحث لدينا على الاحتياجات المحددة لعملك، وحجم موقعك، ومستوى المنافسة في قطاعك، وأهدافك. نحن نقدم لكل عميل خطة مخصصة مع تسعير شفاف. تواصل معنا للحصول على استشارة مجانية وتقدير للتكلفة.",
+  "timelineQuestion": "كم من الوقت يستغرق رؤية نتائج تحسين محركات البحث؟",
+  "timelineAnswer": "تحسين محركات البحث هو عملية مستمرة وطويلة الأمد. عادةً يمكنك ملاحظة بعض التغييرات الأولية خلال الأشهر الثلاثة إلى الأربعة الأولى، لكن النتائج الملحوظة والمستدامة تستغرق عادةً من 6 إلى 12 شهرًا. يعتمد هذا الإطار الزمني على عوامل مختلفة مثل المنافسة، وعمر النطاق، وجودة المحتوى، والبنية التقنية للموقع.",
+  "wordpressQuestion": "هل تستخدمون ووردبريس فقط لتطوير المواقع الإلكترونية؟",
+  "wordpressAnswer": "لا، نحن نستخدم مجموعة واسعة من التقنيات المناسبة لاحتياجات مشروعك. بالإضافة إلى ووردبريس، يتمتع فريقنا بخبرة في التطوير باستخدام React و Next.js و Node.js و Python (Django/Flask) وغيرها من الأطر الحديثة. نوصي بالتقنية الملائمة بناءً على متطلبات مشروعك الخاصة.",
+  "blackhatQuestion": "هل تستخدمون تقنيات القبعة السوداء في تحسين محركات البحث؟",
+  "blackhatAnswer": "بالتأكيد لا. نحن نستخدم فقط تقنيات القبعة البيضاء والأساليب الأخلاقية وفقًا لإرشادات جوجل. تركِّز استراتيجياتنا على تطوير محتوى عالي الجودة وتجربة مستخدم ممتازة والتحسين الفني. قد تحقق الأساليب غير الأخلاقية نتائج قصيرة الأجل لكنها تؤدي في النهاية إلى عقوبات وتضر بعملك.",
+  "multilingualQuestion": "هل تقدمون خدمات للمواقع متعددة اللغات؟",
+  "multilingualAnswer": "نعم، نحن متخصصون في تصميم وتحسين المواقع متعددة اللغات. يمكن لفريقنا تقديم حلول تقنية مناسبة لتنفيذ المواقع متعددة اللغات، بما في ذلك هيكلة URL المناسبة، وعلامات hreflang، وترجمة المحتوى. لدينا خبرة خاصة في تحسين المواقع الإنجليزية-الفارسية.",
+  "supportQuestion": "هل تقدمون خدمات دعم بعد تسليم المشروع؟",
+  "supportAnswer": "نعم، نقدم باقات دعم متنوعة لضمان أن يظل موقعك محدثًا وآمنًا ومحسنًا دائمًا. تشمل هذه الخدمات التحديثات الأمنية، والنسخ الاحتياطي الدوري، وتحسين الأداء، وتحديث المحتوى، واستكشاف الأخطاء وإصلاحها التقنية. بالإضافة إلى ذلك، نقدم تدريبًا لفريقك لإدارة الموقع."
+  },
+  "ctaTitle": "هل أنت مستعد لتحويل عملك؟",
+  "ctaDescription": "اتصل بنا لمناقشة الاحتياجات المحددة لمشروعك وتقديم حل مصمم خصيصًا لأهداف عملك.",
+  "ourServices": "خدماتنا",
+  "technicalOptimization": "التحسين التقني",
+  "linkBuilding": "بناء الروابط",
+  "keywords": "سيو, تسويق رقمي, تصميم مواقع, تطوير ويب"
+  }
