--- a/i18n/fa/web-development-services.json
+++ b/i18n/fa/web-development-services.json
@@ -1,38 +1,42 @@
 {
-  "webDevelopmentTitle": "خدمات توسعه وب",
-  "webDevelopmentDescription": "ما خدمات جامع توسعه وب را برای به ثمر رساندن ایده‌های شما ارائه می‌دهیم.",
-  "ourServices": "خدمات ما",
-  "frontendDev": "توسعه فرانت‌اند",
-  "frontendDesc": "ما رابط‌های کاربری زیبا و پاسخگو می‌سازیم.",
-  "backendDev": "توسعه بک‌اند",
-  "backendDesc": "ما سیستم‌های بک‌اند قوی و مقیاس‌پذیر توسعه می‌دهیم.",
-  "feature.uiuxDesign": "طراحی UI/UX",
-  "feature.reactNextjs": "توسعه React و Next.js",
-  "feature.responsiveDesign": "طراحی واکنش‌گرا",
-  "feature.webVitals": "بهینه‌سازی Web Vitals",
-  "feature.animations": "انیمیشن‌ها و تعاملات",
-  "feature.apiIntegration": "یکپارچه‌سازی API",
-  "feature.restApi": "توسعه REST API",
-  "feature.python": "توسعه پایتون",
-  "feature.nodejs": "توسعه Node.js",
-  "feature.database": "طراحی و مدیریت پایگاه داده",
-  "feature.auth": "احراز هویت و مجوز",
-  "feature.cloudIntegration": "یکپارچه‌سازی با فضای ابری",
-  "keywords": "توسعه وب, خدمات, react, nextjs",
+  "webDevelopmentTitle": "خدمات تطوير الويب",
+  "webDevelopmentDescription": "نحن نقدم خدمات تطوير الويب الشاملة لتحويل أفكارك إلى واقع.",
+  "ourServices": "خدماتنا",
+  "frontendDev": "تطوير الواجهة الأمامية",
+  "frontendDesc": "نقوم ببناء واجهات مستخدم جميلة ومتجاوبة.",
+  "backendDev": "تطوير الواجهة الخلفية",
+  "backendDesc": "نقوم بتطوير أنظمة خلفية قوية وقابلة للتطوير.",
+  "feature.uiuxDesign": "تصميم واجهة المستخدم/تجربة المستخدم",
+  "feature.reactNextjs": "تطوير React و Next.js",
+  "feature.responsiveDesign": "تصميم متجاوب",
+  "feature.webVitals": "تحسين مقاييس أداء الويب",
+  "feature.animations": "الرسوم المتحركة والتفاعلات",
+  "feature.apiIntegration": "تكامل واجهة برمجة التطبيقات",
+  "feature.restApi": "تطوير واجهة برمجة التطبيقات REST",
+  "feature.python": "تطوير بايثون",
+  "feature.nodejs": "تطوير Node.js",
+  "feature.database": "تصميم وإدارة قواعد البيانات",
+  "feature.auth": "المصادقة والترخيص",
+  "feature.cloudIntegration": "تكامل السحابة",
+  "keywords": "تطوير الويب, خدمات, react, nextjs",
   "webDev": {
-    "title": "خدمات توسعه وب",
-    "description": "خدمات حرفه‌ای توسعه وب با استفاده از فن‌آوری‌های مدرن و بهترین روش‌ها",
-    "customSites": "توسعه وب‌سایت سفارشی",
-    "customDesc": "وب‌سایت‌های سفارشی ساخته شده با چارچوب‌های مدرن و طراحی پاسخگو",
-    "ecommerce": "راهکارهای تجارت الکترونیک",
-    "ecommerceDesc": "فروشگاه‌های آنلاین با یکپارچه‌سازی پرداخت و مدیریت موجودی",
-    "cms": "سیستم‌های مدیریت محتوا",
-    "cmsDesc": "پلتفرم‌های CMS کاربرپسند برای مدیریت محتوا",
-    "api": "توسعه API",
-    "apiDesc": "APIهای RESTful و سرویس‌های سمت سرور",
-    "performance": "بهینه‌سازی عملکرد",
-    "performanceDesc": "وب‌سایت‌های سریع بارگذاری با عملکرد بهینه",
-    "maintenance": "نگهداری وب‌سایت",
-    "maintenanceDesc": "پشتیبانی مداوم و به‌روزرسانی وب‌سایت"
+    "title": "خدمات تطوير الويب",
+    "description": "خدمات تطوير وب احترافية باستخدام التكنولوجيا الحديثة وأفضل الممارسات",
+    "customSites": "تطوير مواقع مخصصة",
+    "customDesc": "مواقع مخصصة مبنية باستخدام الإطارات الحديثة والتصميم المتجاوب",
+    "ecommerce": "حلول التجارة الإلكترونية",
+    "ecommerceDesc": "متاجر إلكترونية مع تكامل الدفع وإدارة المخزون",
+    "cms": "أنظمة إدارة المحتوى",
+    "cmsDesc": "منصات CMS سهلة الاستخدام لإدارة المحتوى",
+    "api": "تطوير APIs",
+    "apiDesc": "APIs RESTful وخدمات backend",
+    "performance": "تحسين الأداء",
+    "performanceDesc": "مواقع تحميل سريع بأداء مثالي",
+    "maintenance": "صيانة المواقع",
+    "maintenanceDesc": "دعم مستمر وتحديثات الموقع"
+  },
+  "webDevServices": {
+    "title": "خدمات تطوير الويب",
+    "description": "خدمات تطوير الويب الاحترافية بما في ذلك تصميم مواقع مخصصة، إعداد التجارة الإلكترونية، أنظمة CMS، وتحسين الأداء"
   }
 }
