--- a/i18n/fa/wordpress.json
+++ b/i18n/fa/wordpress.json
@@ -1,45 +1,45 @@
 
 {
-  "title": "توسعه حرفه‌ای وردپرس و ووکامرس",
-  "subtitle": "ایجاد سایت‌های وردپرس سفارشی و فروشگاه‌های آنلاین ووکامرس با طراحی منحصر به فرد و عملکرد بهینه",
-  "wordpressAndWoocommerce": "وردپرس و ووکامرس",
-  "wpServices": "خدمات وردپرس",
-  "ourServices": "خدمات ما",
-  "servicesTitle": "خدمات توسعه وردپرس و ووکامرس",
-  "servicesDescription": "ما مجموعه‌ای جامع از خدمات تخصصی وردپرس و ووکامرس برای رشد کسب‌وکار آنلاین شما ارائه می‌دهیم",
-  "benefits": "مزایا",
-  "benefitsTitle": "چرا وردپرس و ووکامرس؟",
-  "benefitsDescription": "وردپرس و ووکامرس مزایای متعددی برای کسب‌وکارهای آنلاین ارائه می‌دهند و آن‌ها را به گزینه‌ای ایده‌آل تبدیل می‌کنند",
-  "pricing": "قیمت‌گذاری",
-  "pricingTitle": "طرح‌های طراحی وب‌سایت وردپرس",
-  "pricingDescription": "طرح‌های مختلف طراحی وب‌سایت وردپرس متناسب با نیازها و بودجه کسب‌وکارهای مختلف",
-  "faq": "سوالات متداول",
-  "faqTitle": "سوالات متداول",
-  "faqDescription": "پاسخ به سوالات رایج درباره خدمات طراحی وب‌سایت وردپرس و ووکامرس",
-  "portfolio": "نمونه کارها",
-  "portfolioTitle": "پروژه‌های موفق وردپرس و ووکامرس",
-  "portfolioDescription": "نگاهی به برخی از پروژه‌های برجسته وردپرس و ووکامرس طراحی و توسعه‌یافته توسط تیم ما",
-  "ctaTitle": "آماده شروع پروژه وردپرس خود هستید؟",
-  "ctaDescription": "برای مشاوره رایگان و اطلاعات بیشتر در مورد خدمات طراحی وب‌سایت وردپرس با ما تماس بگیرید",
-  "specialOffer": "پیشنهاد ویژه",
-  "orderPlan": "سفارش طرح",
-  "themeCustomization": "سفارشی‌سازی قالب",
-  "ecommerceSetup": "راه‌اندازی فروشگاه",
-  "maintenanceSupport": "نگهداری و پشتیبانی",
-  "seoOptimization": "بهینه‌سازی سئو",
-  "contentCreation": "تولید محتوا",
-  "wordpressServices": "خدمات وردپرس",
-  "customThemes": "طراحی و توسعه قالب‌های سفارشی وردپرس",
-  "pluginDevelopment": "توسعه افزونه سفارشی و یکپارچه‌سازی",
-  "performanceOptimization": "بهینه‌سازی عملکرد و بهبود سرعت",
-  "security": "تقویت امنیت و نگهداری",
-  "woocommerceServices": "خدمات ووکامرس",
-  "paymentIntegration": "یکپارچه‌سازی درگاه‌های پرداخت (Stripe, PayPal, etc.)",
-  "inventoryManagement": "یکپارچه‌سازی مدیریت موجودی و محصولات",
-  "taxShipping": "پیکربندی مالیات و حمل و نقل",
+  "title": "خدمات تطوير مواقع ووردبريس",
+  "subtitle": "حلول مخصصة لمواقع ووردبريس تجمع بين الأداء العالي وسهولة الاستخدام",
+  "description": "نقدم خدمات شاملة لتطوير مواقع ووردبريس من التصميم المخصص إلى البرمجة المتقدمة وتحسين الأداء.",
+  "contentCreation": "إنشاء المحتوى",
+  "technicalOptimization": "التحسين التقني",
+  "wordpressAndWoocommerce": "ووردبريس و ووكومرس",
+  "woocommerceTitle": "متاجر ووكومرس",
+  "woocommerceDescription": "إنشاء متاجر إلكترونية احترافية مع ووكومرس",
   "cta": {
-    "title": "آماده راه‌اندازی وب‌سایت وردپرس خود هستید؟",
-    "description": "مشاوره رایگان دریافت کنید و قیمت پروژه وردپرس خود را دریافت کنید",
-    "button": "مشاوره رایگان دریافت کنید"
+    "title": "هل أنت جاهز لبدء مشروع ووردبريس الخاص بك؟",
+    "description": "اتصل بنا للحصول على استشارة مجانية ومعلومات أكثر حول خدمات تصميم مواقع ووردبريس"
+  },
+  "benefits": {
+    "title": "مميزات مواقع ووردبريس لدينا",
+    "subtitle": "نحن نصمم مواقع ووردبريس توفر تجربة مستخدم ممتازة وأداء عالي",
+    "items": [
+      {
+        "title": "سهولة الإدارة",
+        "description": "واجهة سهلة الاستخدام تمكنك من تحديث المحتوى بنفسك"
+      },
+      {
+        "title": "متوافق مع SEO",
+        "description": "مواقع مُحسّنة لمحركات البحث تساعد في تحسين ظهورك على الإنترنت"
+      },
+      {
+        "title": "متجاوب مع الأجهزة المحمولة",
+        "description": "تصميم يعمل بشكل مثالي على جميع الأجهزة والشاشات"
+      },
+      {
+        "title": "أمان عالي",
+        "description": "حماية متقدمة ضد التهديدات الأمنية وعمليات الاختراق"
+      },
+      {
+        "title": "سرعة تحميل عالية",
+        "description": "مواقع سريعة التحميل توفر تجربة مستخدم أفضل"
+      },
+      {
+        "title": "قابلية التوسع",
+        "description": "إمكانية إضافة ميزات جديدة بسهولة مع نمو عملك"
+      }
+    ]
   }
 }
